--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,25 +1,22 @@
 ---
-title: 新的卫星图像显示，俄罗斯在乌克兰边境增派直升机
+title: 澳大利亚警方承认对堪培拉抗议民众使用了LRAD装置
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2031066/)
+`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/2031254/)
 
-撰稿：东京樱花团/百花李香
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1783.png)图片来自本文网站
-2月19日CNN要闻在线消息：美国Maxar Technologies公司的新卫星图像显示，部署在乌克兰边境附近的俄罗斯直升机数量有明显增加。
+作者：台湾宝岛农场 寻文客
 
-根据Maxar的分析，一支新的直升机部队和一个由坦克和装甲车组成的战斗群已被部署在距离乌克兰边境16公里的米列罗沃机场。另外，一支拥有20多架直升机的部队也被部署在位于乌克兰边境以东约27公里的巴布鲁伊斯基附近。而且与之前的图像一样，近20架直升机仍然部署在乌克兰边境以东约35公里的别尔哥罗德附近。
 
-CNN证实的社交媒体上的一段视频显示，攻击直升机部署在巴布鲁伊斯基和别尔哥罗德附近的两个机场。
 
-俄罗斯国防部本周早些时候宣布，正在将一部分部队从乌克兰撤回基地。作为撤离的证据，甚至发布了一段载有大量坦克的火车的视频。
+**【新闻链接】**[https://www.rebelnews.com/police\_confirm\_use\_of\_controversial\_lrad\_device\_at\_canberra\_protest](https://www.rebelnews.com/police_confirm_use_of_controversial_lrad_device_at_canberra_protest)
 
-然而，过去一周出现的卫星图像和SNS视频显示，俄罗斯的坦克、弹道导弹正往乌克兰边境地区驶去，尤其是北部和东北部。
+**据外媒****2****月****18****日报导，澳大利亚首都地区警方承认，在堪培拉议会大厦外的自由车队集会期间，他们使用了长距离声学装置（****LRAD****）。**
 
-信息源：[ロシア、ウクライナ国境のヘリ部隊を増強　新たな衛星画像で判明](text=%E3%83%88%E3%83%94%E3%83%83%E3%82%AF%E3%82%B9%E4%B8%80%E8%A6%A7-,%E3%83%AD%E3%82%B7%E3%82%A2%E3%80%81%E3%82%A6%E3%82%)
+**LRAD****装置有两种模式。一种为传递信息的扩音装置，另一种则是控制人群的****“****声波武器****”****。****LRAD****装置在人群中的使用存在极大争议性，如纽约市警察局曾向联邦法庭建议停止对处于警戒状态的抗议者使用****LRAD****装置。**
 
-*编辑：东京樱花团/喜马拉雅的微尘
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+**LRAD****装置在堪培拉的使用让很多公众观察家感到震惊，因为****LRAD****装置本质是一种人群控制声波武器。在非扩音设置下使用****LRAD****装置及其危险，已知会造成永久性听力损伤、脑损伤等结果。**
+
+**据悉，澳大利亚联邦警察、昆士兰州警察、南澳大利亚州警察、西澳大利亚州警察和澳大利亚维多利亚州警察都证实他们已经购买了****LRAD****装置。**
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
