--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,32 +1,40 @@
 ---
-title: 大直播后记——韩正状态很不好
+title: 俄乌局势再添变数，顿巴斯停火协议地区民用设施遭炮袭
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2030796/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2030906/)
 
-整理：Miles Sun、奋斗
-编辑：Kelly
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-315.jpeg)
+撰文：台湾宝岛农场   快慢机
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-316.jpeg)
+当地时间2月17日，乌克兰东部顿巴斯停火协议区内的一所民间幼儿园，在亲俄武装所发起的炮袭行动中被击中。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-314.jpeg)
+据悉，一直驻守在乌克兰东部顿巴斯停火协议区内的欧安组织监督观察人员记录发现，近期在该区域内已经相继接连发生了数起，有关乌克兰政府军与顿巴斯亲俄武装的接触性交火及远程炮袭事件。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-313.jpeg)
+这次在炮袭中受损的乌克兰民间幼儿园，其中一间教室的墙壁被炮弹击穿，但所幸并未造成人员伤亡。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-312.jpeg)
+乌克兰总统泽连斯基随后就2月17日发生的顿巴斯停火协议区内民用幼儿园遭炮袭一事对外界表示，这是该区域亲俄武装对停火协议的“重大挑衅”！
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-311.jpeg)
+然而，顿巴斯地区的亲俄武装则对外宣称，是由于乌克兰政府军此前率先用迫击炮对其锋线阵地实施轰炸后，他们才被迫回应发起炮袭反击。双方各执一词，相互指责违反停火协议错不在己。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-310.jpeg)
+与此同时，俄军一支重装突击力量，正在距离乌克兰首都基辅近在咫尺的，白俄罗斯与乌克兰边境地区“切尔诺贝利”附近完成集结。莫斯科的这一部署显然并未完全放松对乌克兰的军事威慑，反而有随时直取其首都基辅之势。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/JV4_5ME01ZG_5LC@60.png)图片来源：雅典娜设计组（614）
+反观北约也并未就2月15日，普京下令部分俄乌边境演习部队后撤，所作出的表面性妥协而放松警惕。北约秘书长斯托尔滕贝格仍旧对乌克兰加入北约而不断寻求努力，为应对俄罗斯进一步可能随时采取的激进动作，北约正在考虑向其东南部的罗马尼亚方向增派一支快速反应战斗群，以加强该区域的对俄防御反击能力。
 
+值得一提的是，就在顿巴斯停火协议地区发生炮袭事件，以及北约秘书长对外表示要加强对俄罗斯的激进态势作出及时有效回应的同时，莫斯科方面却突然毫无征兆的作出了，对美国驻俄罗斯副大使“戈尔曼”立即驱逐出境的行动。克里姆林宫此举并不排除是对白宫近期，接连宣称俄军会随时对乌克兰采取突袭行动言论的战术回应。
 
-头两天，有人见了韩正说，都傻了。他说，韩正这个人锻炼、生活方式，是中央里最好的人，（这次见了）韩正是言不由衷、神不守舍，而且状态特别不好。他老婆老说他口臭，说他最近口臭，这个医生正在调（理），口臭，她说你别挨他那么近，口臭啊。
+此文仅代表笔者个人观点！
 
-这是上海的老同志回来后跟我说的，他说韩正状态不好，一提习，（就说）不要谈政治啊，咱们就谈谈上海的这些生活的事。就把韩正吓成这个样子。可见整个中共到了什么地步。
+资料链接：[https://www.sohu.com/a/523576991\_123753](https://www.sohu.com/a/523576991_123753)
 
-说实话，这是我们新中国联邦最希望有的感觉。今年（共产党）千万别倒啊，再给我们点时间，让世界把所有的事儿都整明白，新中国联邦有能力影响下一届，咱们真正的民选总统，现在这个时候还真没准备好，他死太早真不行。就像路大脑袋、蛇妖闫、九指妖，这帮孙子今天进监狱，绝对不好玩。
+[https://www.sohu.com/a/523530652\_260616](https://www.sohu.com/a/523530652_260616)
 
-昨天木兰发信息给我说，郭宝胜那个高兴，说：“我在郭文贵破产名单上有1000万。”战友们，我现在想毁谁，我一定把谁加名单上，很简单，我把谁加名单上，你都得面对官司，你都得拿律师费，你必须得到法庭来，郭宝胜不准备50万美元想逃过这个劫是不可能的。1000万你想拿到，肯定绝对千分之一机会都没有，千亿分之一的机会都没有。但是你准备好几十万美金的律师费上法庭是必须的，而且你必须上庭，（郭保胜）就是这种愚蠢的猪。
+* * *
 
-资料来源：郭先生GTV和盖特直播视频
-
-*发布：tianzhihuan*
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+***更多资讯***
+[台湾农场精彩文章](https://gnews.org/zh-hant/author/taiwangnews/)
+[台湾农场精彩直播影片](https://gtv.org/user/5f60d588245d3c0579acdbec)
+[订阅台湾宝岛农场官方YOUTUBE频道](https://www.youtube.com/channel/UCXlInG8cGCHSN5y54zcgoOw/videos)
+[点击此处加入「台湾宝岛农场」Discord伺服器](https://discord.gg/zE5xTQzArt)
 
  
 
