--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,23 +1,37 @@
 ---
-title: 《历史的今天》2022.02.19
+title: 马里兰州夫妇承认向外国政府出售核潜艇机密
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2030795/)
+`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2030895/)
 
-作者：JAY (杰伊)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/0219.jpeg)
-一，1942年2月19日，日本海军航空兵对澳大利亚达尔文港发动空袭。
-二，1942年2月19日，美国将112,000多名居住在美国的日裔美国人和日本人强制遣送拘留营。
-三，1938年2月19日，希特勒演讲，这是德国纳粹政权扩张的开始。
-四，1945年2月19日，美国海军在硫磺岛登陆，向日本军发动进攻，硫磺岛战役爆发。
-五，1980年2月19日，美国再次表示坚决抵制莫斯科奥运会。
-六，2008年2月19日，卡斯特罗卸任其在位49年的古巴总统职位。
-七，2020年2月19日，班农先生与郭文贵先生在喜马拉雅大使馆直播谈论中共国武汉疫情及影响。
-八，2021年2月19日，郭文贵先生直播表示，以毒灭共是我们新中国联邦、爆料革命真正的、大的、巨大的，可以说是第一的利器！第二个过去是我们的香港运动，现在这香港运动还排第二。
-九，2021年2月19日，美国总统拜登与七国集团(G7)领导人线上峰会，讨论新冠疫情、全球经济、以及对抗中共国的“非市场导向”政策。
+素材整理：波士顿五月花 Vicky
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-19-at-7.57.58-PM.png)图片来源：互联网
+**一名美国海军工程师的妻子被指控协助其丈夫将核动力潜艇机密向国外出售。**
+
+**46岁的戴安娜-托比（Diana Toebbe），曾是一名教师，根据她与联邦检察官达成的认罪协议，她将在监狱中度过不超过三年。**
+
+**她的丈夫乔纳森-托比（Jonathan Toebbe），42岁，本周早些时候认罪。**
+
+**根据他的认罪协议，他将被判处约12-17年的刑期。**
+
+**托比夫妇都在西弗吉尼亚州马丁斯堡的联邦法院承认了密谋传播限制性数据的罪名。**
+
+**乔纳森-托比是潜艇核动力系统方面的专家，这是国家最严密的机密之一。**
+
+**据司法部称，他试图将这些信息卖给外国政府，向他认为是外国官员的人发送信息。事实上，这名外国官员是一名卧底的联邦调查局特工。**
+
+**这类案件的认罪求情协议虽然属于不同寻常，但它们有可能达成。法律专家说，联邦调查员对这类案件非常重视，他们可能愿意支持对被告人的较轻判决，以换取他们的信息。**
+
+**纽约哥伦比亚大学法律教授丹尼尔-里奇曼（Daniel Richman）说，有时，”检察官会放弃对被告的最高刑罚，以便让他们说出可能有助于他们反间谍行动的事情”。**
+
+**在这个案件中，调查人员希望从被告那里找到一些东西。根据联邦调查员起草的宣誓书，乔纳森-托比曾要求以加密货币支付10万美元，以换取核机密。**
+
+**作为认罪协议的一部分，托比夫妇表示，他们将帮助联邦调查局收回在导致他们被捕的联邦调查期间寄给他们的加密货币。**
+
+参考链接：[Maryland couple plead guilty in nuclear secrets plot](https://www.bbc.com/news/world-us-canada-60442225)
 
 * * *
 
-*发布：Theodosia*
+*编辑&发布：Vicky*
 
  
 
