--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,15 +1,34 @@
 ---
-title: 破产申请是遵循法律依据
+title: 一起中共间谍涉嫌走私军事装备背后的阴谋
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2030784/)
+`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/2030852/)
 
-整理：文晋、sadhu
-编辑：朝花夕拾
+#### **【雅典娜观察】和您一起洞察世界**
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/JV4_5ME01ZG_5LC@60.png)图片来源：墨尔本雅典娜农场计组
+翻译/编辑：文泓
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/3-53.png)
 
 
-还有一个最关键是什么？ 兄弟姐妹们，这个申请完破产以后，我们到法庭上我们更有独立的，让法官知道我们为什么申请个人破产，过去的几年七哥被陷害。这对于破产法官来讲，你去想想看看。这个事实在这全摆着呢。其实几个案子，多少被陷害？ 刘延平来美国，就是咱把案子从那个法庭移到这个法庭，完全是个心情，所以战友们一定要学到，这个不是开玩笑的，你一定要了解美国的法律，了解你所在国的法律，这是特别特别重要的。 你说七哥每天吃什么喝什么都是全世界公开的，我拥有的什么都是全世界公开。任何一个战友都比你七哥有钱。所以说，兄弟姐妹们这次的破产案，我很多话还不能说。 因为这个刚才已经来告诉我了，不要在直播中谈那么多破产，我不能喊你们可以谈啊！这个让大家要学到法律是多重要。法律是太重要了。这就是西方和中国的不同。 你们想,我在中国那不知道多少罪弄到我头上去了是吧？ 秒间让你消失在人间，是吧？ 这就是真正的西方的伟大。 你可以有这些法律程序，你可以用法律正义来保护你自己的安全，你自己的利益。 这是我们在西方永远要学到的。 你看看那帮孙子路大脑袋郭宝胜还得意呢，他都不知道他噩梦已经到来，他还不知道。还有一个就是老说我们没钱没人，就像共产党老说美国没钱，美国帝国主义，你不要去美国不就完了吗？特别说共产党，美国那么坏，你要把你们儿女私生子女送到美国干什么？ 就像新中国联邦是骗子，是一帮疯子邪教。你别来不就完了吗？ 别参加不就完了吗？是不是，你说哪有一个不要脸 的人个天天去骂一个比自己过得好的人。碍你什么事儿呢？ 你不去不就完了嘛？碍你个蛋的事儿，你不要来不就好，你不看不就完了，你干嘛看呢？谢谢。
+本周，澳大利亚议会被中共国有影响力指控案件所困扰。周五，昆士兰地方法院审理了64岁的华裔黄金海岸会计师Kim李博伟和63岁的俄罗斯裔布里斯班企业家亚历山大·谢尔被指控违反了澳大利亚《国防贸易管制法》。
+
+多方消息来源称，指控源于澳大利亚安全情报组织（ASIO）对一个在澳运作的中共间谍网络的更广泛调查。**早在****2016****年****8****月，澳大利亚官员拦截了一架由澳洲赌场组织的、从黄金海岸飞往新西兰的不寻常的私人飞机航班，就发现了这个网络的成员。**
+
+李先生是该航班上的六名乘客之一。其他乘客包括习近平主席的表弟齐明、墨尔本有组织犯罪头目和赌场旅行团经营者号称唐人街先生周九明，以及另一个被怀疑与中国情报部门有关的人物。
+
+由于齐明与习家的关系，以及他与墨尔本的中国犯罪人物和中共特工的关系，而且齐明曾为中兴通讯工作，该公司与中国军工综合体的关系有案可查，ASIO对齐特别关注。
+
+布里斯班地方法院周五听取了李博伟和谢尔被指控与另一名中国公民和前墨尔本商人布莱恩·陈合作，**陈现在躲在海外，是国际刑警组织红色通报的对象。**
+
+ASIO消息人士称，**布莱恩·陈是第一个在澳大利亚被揭发的中共情报嫌疑人员，在****2019****年底也被多家澳洲媒体列入调查的一部分，并公布了陈先生曾试图渗透到澳大利亚议会的指控。**这些报道详细介绍了ASIO的一名线人声称，陈先生曾试图通过扶植维多利亚州自由党成员赵波成为议员，从而在联邦议会安插一名间谍。
+
+2019年，陈成为ASIO强烈关注的对象。在此之前，他住在墨尔本，经营着几家企业。他还被列为几家香港和中国大陆公司的董事和股东，与中国军事采购业有很深的关系。
+
+然而，赵波于2019年3月意外死亡，此前他告诉ASIO官员，陈先生曾向他提供100万澳元，供他竞选联邦议会席位。ASIO官员于2019年3月在墨尔本机场询问了陈先生，但他随后被允许离开澳大利亚。
+
+作为对这些披露的回应，ASIO局长迈克·伯吉斯发表了一份公开声明，称其目前正在“认真对待”有关涉嫌干预阴谋的指控。
+
+新闻链接：[Alexander Cher, Brian Chen accused of smuggling military equipment by AFP (smh.com.au)](https://www.smh.com.au/national/afp-uncovers-suspected-chinese-spy-s-alleged-plot-to-smuggle-military-equipment-20220218-p59xld.html)
 
 *发布：tianzhihuan*
 
