--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,42 +1,17 @@
 ---
-title: 《冬眠会》
+title: 美欧政府已经放任集体感染 预计十几亿人将因疫苗死亡
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2030600/)
+`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/2030695/)
 
-作者—爱战神
-校对/上传—无明逆流
+疫苗灾难下，有科学家已经透露，预计将有十几亿人会因为疫苗而死亡。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/screenshoteasy-9.png)图片来源：网络
+美欧政府已经放任集体感染，政府解除疫苗护照的原因：1.经济撑不住了，2.政治撑不住了，3. 病毒有减缓迹象。
 
-甲：彭彭引颈高歌吟，我爱塞北人造雪
-乙：包子终圆纳粹梦，世界老大茫然懵
-丙：冬眠会上耷脑袋，臃肿两层衣防弹
-丁：丢丑
+冠状病毒还没结束，郭文贵先生再发警告，22年5月前，战友们务必要小心。
 
-甲：七哥大唱假雪歌，吓得彭彭不敢歌
-乙：夫唱夫随秀恩爱，权力双双登顶峰
-丙：跪天求地蓝金黄，讨债要饭才肯来
-丁：撒币
-
-甲：普京千亿九小时，中共毁约愤怒起
-乙：人造假雪祸千年，普帝不忍来呵斥
-丙：保镖染毒死三个，盘古阻击头头死
-丁：乱
-
-甲：三十国家穷小弟，可怜兮兮把习舔
-乙：羊进狼窝关着宰，善待佳肴是面包
-丙：可怜楚楚运动员，痛哭控诉中共行
-丁：损
-
-甲：中共运动员猛秀，雌雄莫辨怎双修
-乙：中共皆是假恶丑，一切全是假大空
-丙：贻笑大方天下扬，不以为耻反为荣
-丁：没脸
-
-甲：爆料革命来揭露，习神里外不是人
-乙：中共冬眠巳冻死，永做恶梦遥无期
-丙：消灭中共恶魔鬼，唯有克星郭文贵
-丁：七哥
+视频来源: 20220218—郭先生大直播
+视频制作: 文星光，梦田
+文案:文星光
 
  
 
