--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,38 +1,25 @@
 ---
-title: 马里兰州夫妇承认向外国政府出售核潜艇机密
+title: 新的卫星图像显示，俄罗斯在乌克兰边境增派直升机
 ---
-`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2030895/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2031066/)
 
-素材整理：波士顿五月花 Vicky
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-19-at-7.57.58-PM.png)图片来源：互联网
-**一名美国海军工程师的妻子被指控协助其丈夫将核动力潜艇机密向国外出售。**
+撰稿：东京樱花团/百花李香
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1783.png)图片来自本文网站
+2月19日CNN要闻在线消息：美国Maxar Technologies公司的新卫星图像显示，部署在乌克兰边境附近的俄罗斯直升机数量有明显增加。
 
-**46岁的戴安娜-托比（Diana Toebbe），曾是一名教师，根据她与联邦检察官达成的认罪协议，她将在监狱中度过不超过三年。**
+根据Maxar的分析，一支新的直升机部队和一个由坦克和装甲车组成的战斗群已被部署在距离乌克兰边境16公里的米列罗沃机场。另外，一支拥有20多架直升机的部队也被部署在位于乌克兰边境以东约27公里的巴布鲁伊斯基附近。而且与之前的图像一样，近20架直升机仍然部署在乌克兰边境以东约35公里的别尔哥罗德附近。
 
-**她的丈夫乔纳森-托比（Jonathan Toebbe），42岁，本周早些时候认罪。**
+CNN证实的社交媒体上的一段视频显示，攻击直升机部署在巴布鲁伊斯基和别尔哥罗德附近的两个机场。
 
-**根据他的认罪协议，他将被判处约12-17年的刑期。**
+俄罗斯国防部本周早些时候宣布，正在将一部分部队从乌克兰撤回基地。作为撤离的证据，甚至发布了一段载有大量坦克的火车的视频。
 
-**托比夫妇都在西弗吉尼亚州马丁斯堡的联邦法院承认了密谋传播限制性数据的罪名。**
+然而，过去一周出现的卫星图像和SNS视频显示，俄罗斯的坦克、弹道导弹正往乌克兰边境地区驶去，尤其是北部和东北部。
 
-**乔纳森-托比是潜艇核动力系统方面的专家，这是国家最严密的机密之一。**
+信息源：[ロシア、ウクライナ国境のヘリ部隊を増強　新たな衛星画像で判明](text=%E3%83%88%E3%83%94%E3%83%83%E3%82%AF%E3%82%B9%E4%B8%80%E8%A6%A7-,%E3%83%AD%E3%82%B7%E3%82%A2%E3%80%81%E3%82%A6%E3%82%)
 
-**据司法部称，他试图将这些信息卖给外国政府，向他认为是外国官员的人发送信息。事实上，这名外国官员是一名卧底的联邦调查局特工。**
-
-**这类案件的认罪求情协议虽然属于不同寻常，但它们有可能达成。法律专家说，联邦调查员对这类案件非常重视，他们可能愿意支持对被告人的较轻判决，以换取他们的信息。**
-
-**纽约哥伦比亚大学法律教授丹尼尔-里奇曼（Daniel Richman）说，有时，”检察官会放弃对被告的最高刑罚，以便让他们说出可能有助于他们反间谍行动的事情”。**
-
-**在这个案件中，调查人员希望从被告那里找到一些东西。根据联邦调查员起草的宣誓书，乔纳森-托比曾要求以加密货币支付10万美元，以换取核机密。**
-
-**作为认罪协议的一部分，托比夫妇表示，他们将帮助联邦调查局收回在导致他们被捕的联邦调查期间寄给他们的加密货币。**
-
-参考链接：[Maryland couple plead guilty in nuclear secrets plot](https://www.bbc.com/news/world-us-canada-60442225)
-
-* * *
-
-*编辑&发布：Vicky*
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
