--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,42 +1,47 @@
 ---
-title: 为什么我们不调查运动员猝死的激增？
+title: 徐州女孩实名举报中共暴力强拆致人重伤
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2030793/)
+`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2030887/)
 
-**编译： Jenny Ball**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip为什么我们不调查运动员猝死的激增？.png)图片来源：childrenshealthdefense.org
-故事概览：
-
-- 英国足球传奇人物和体育评论员马特·勒蒂西尔（Matt Le Tissier）一直在谈论大量运动员在球场上倒下或死亡，并因此失去工作。
+作者：香草山健身部-新世界的一员
 
 
-勒蒂西尔表示，他踢足球的 17 年里，从未见过这样的事情——他呼吁对这些事件进行调查，并表示，无视这些是官员们的“严重失职”。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-42.png)
+2022年2月16日，江苏徐州丰县欢口镇女孩实名举报欢口镇拆迁办雇佣社会无业游民强制执行暴力拆迁，对虹口村断桥段路阻止村民出行，并用辣椒水等各种暴力威胁方法强迫村民签字同意拆迁。强制拆迁过程中，该女孩父亲被打至重伤。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/22-7.png)
+举报女孩称：2021年12月17日，刘宁、汪雪峰带领雇佣的社会无业人员开着挖掘机进村并对该村断桥段路断电，迫使村民签字同意。无业人员进入女孩爸爸家先摧毁安装好的监控再断电，然后非法破门而入，强迫签字不成就把老人家带到拆迁办办公室关门群殴，并逼着签字。这种行为致使老人右侧三根肋骨骨折、右侧眼眶和鼻子骨骨折、前侧颚骨骨折、折合颚骨粉碎性骨折，几家当地医院不敢接收。报警之后的几天也无人处理，更别说把打人者绳之以法了。
 
-- 事实核查人员和政府官员，正试图否定或抹黑支持这种理论的信息，即 mRNA 注射是造成伤害和突然死亡的原因，他们故意无视对这些指控的调查。
-- 疫苗不良事件报告系统 (VAERS)，仅仅反映普通人群中运动员的受伤情况，但这些突然死亡的报告可能远未发布。
+女孩哭诉，女孩母亲日夜哭泣，要照顾刚出生的小侄女，弟弟在医院陪护伟在旦夕的父亲。女孩天天求天天不应，求地地无门，身单力薄，走投无路，只好录视频网上求助，希望能求得媒体关注。
+
+中共对农村的拆迁有相应的政策，但是中共国的农村却遭遇暴力强拆，且强拆造成对无辜人员对伤害无人关注。中共设立的法律形同虚设。
+
+参考来源：
+
+[https://gettr.com/post/pv15dm50c3](https://gettr.com/post/pv15dm50c3)
 
 
-随着时间的推移，因 COVID mRNA 注射而遭受悲惨后果的人的名单越来越长。
 
-其中许多人和他们的故事一直被掩盖在公众视野之外。YouTube、Instagram、Facebook 和其他社交媒体平台已经审查掉了记录他们受伤和永久性残疾的个人故事和视频，因此，那些只阅读主流媒体的人并没有意识到以科学的名义造成的巨大破坏。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-43.jpg)
 
-然而，有一部分人的伤亡情况已被公开。在过去的六个月里，一大批专业和业余运动员在赛场上倒下身亡。然而，主流媒体似乎从容应对，表现得好像正在发生的事情是完全正常的。
+编辑/校对/发稿：兰兰
 
-但是，正如马特·勒蒂西尔在视频的前几秒中所描述的，这远非正常。马特·勒蒂西尔是一位足球传奇人物。在离开这项运动成为体育评论员之前，他在球场上的实力为他赢得了“乐神”的绰号，最近一次是在天空体育。
+**更多资讯，更多关注**
 
-正如他在采访中所描述的那样，他失去了这份工作，因为他大声疾呼，并引起人们对世界各地专业和业余运动员发生的大量无法解释的心源性猝死的关注。
+[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-“我希望有人调查一下。我们可以回顾过去 15 年或 20 年……看看 10 年前发生了多少次猝死，再看看去年又发生了多少次。我一直在看很多体育赛事和很多关于足球的报道，我从来没有见过这样的事情，因为人群中的紧急情况，比赛而被打断的数量之高。”
+[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
 
-**新闻来源**：[childrenshealthdefense.org][Why Aren’t We Investigating Surge in Sudden Deaths of Athletes?](https://childrenshealthdefense.org/defender/surge-sudden-deaths-athletes/?utm_source=salsa&amp;eType=EmailBlastContent&amp;eId=f435bd0c-985a-4c45-a627-5d4df1da646b)
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
 
-* * *
+[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
-***审核：文乐
-校对：花羽
-发布：信心满满***
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-5.jpeg)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-43.png)
+
+
+
 
  
 
