--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,45 +1,32 @@
 ---
-title: 郭先生发布“解救八孩女”悬赏次日,中共政府宣布重启该案调查
+title: 大直播后记——韩正状态很不好
 ---
-`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2030755/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2030796/)
 
-作者：纽约香草山农场教育部-—Noemi
+整理：Miles Sun、奋斗
+编辑：Kelly
 
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good-40.png)
-
-
-2022年2月17日中午，中共江苏省委省政府突发通告称：决定立即成立“丰县八孩女子”事件的行动调查组，并向公众承诺会彻底查明事实真相。而就在该公告发出的前一晚，郭文贵先生在大直播节目中发布了一则有关“解救八孩女的”悬赏。此次，中共政府紧急发布的这一通告也许就与郭先生的这则悬赏相关。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/131-1-1.jpg)
-据了解，目前已有很多墙内同胞都自发到达该事件的发生地——中共徐州市，并在当地冒着生命危险为“解救八孩女”一事勇敢发声。郭先生知悉此事后就面向公众再次发出了一则悬赏。郭先生称，在未来，这些敢于为“八孩女”事件发声、发推的正义人士，都将会获得一千乃至一万个不等的喜币奖励。而在该悬赏发出后的不到十二小时里，中共政府就突然成立了一个江苏省级的行动调查组，并声称会彻底查明事实真相，严惩该案件的违法犯罪行为，对有关责任人员进行严肃追责，还会将最终的调查结果及时公布于众。
-
-有盖特网友对此评论称，中共政府此次对于“八孩女”事件的态度急转弯则再次体现出了我们新中国联邦、爆料革命的正义力量。
-
-参考来源：
-
-[https://gtv.org/video/id=620cf40c432ae869226d8db5](https://gtv.org/video/id=620cf40c432ae869226d8db5)
-
-[https://www.gettr.com/post/pv0tis1617](https://www.gettr.com/post/pv0tis1617)
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-42.jpg)
-
-编辑/校对/发稿：兰兰
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/JV4_5ME01ZG_5LC@60.png)图片来源：雅典娜设计组（614）
 
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good-41.png)
+头两天，有人见了韩正说，都傻了。他说，韩正这个人锻炼、生活方式，是中央里最好的人，（这次见了）韩正是言不由衷、神不守舍，而且状态特别不好。他老婆老说他口臭，说他最近口臭，这个医生正在调（理），口臭，她说你别挨他那么近，口臭啊。
 
+这是上海的老同志回来后跟我说的，他说韩正状态不好，一提习，（就说）不要谈政治啊，咱们就谈谈上海的这些生活的事。就把韩正吓成这个样子。可见整个中共到了什么地步。
+
+说实话，这是我们新中国联邦最希望有的感觉。今年（共产党）千万别倒啊，再给我们点时间，让世界把所有的事儿都整明白，新中国联邦有能力影响下一届，咱们真正的民选总统，现在这个时候还真没准备好，他死太早真不行。就像路大脑袋、蛇妖闫、九指妖，这帮孙子今天进监狱，绝对不好玩。
+
+昨天木兰发信息给我说，郭宝胜那个高兴，说：“我在郭文贵破产名单上有1000万。”战友们，我现在想毁谁，我一定把谁加名单上，很简单，我把谁加名单上，你都得面对官司，你都得拿律师费，你必须得到法庭来，郭宝胜不准备50万美元想逃过这个劫是不可能的。1000万你想拿到，肯定绝对千分之一机会都没有，千亿分之一的机会都没有。但是你准备好几十万美金的律师费上法庭是必须的，而且你必须上庭，（郭保胜）就是这种愚蠢的猪。
+
+资料来源：郭先生GTV和盖特直播视频
+
+*发布：tianzhihuan*
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
