--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,33 +1,24 @@
 ---
-title: 乌克兰已正式将加密货币合法化
+title: 破产申请是遵循法律依据
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2030704/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2030784/)
 
-**编译：Jenny Ball**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip乌克兰已正式将加密货币合法化.png)图片来源：tweaktown.com
-乌克兰这个国家已正式将比特币和其他加密货币合法化。四个月前通过的法案现已签署成为法律。
+整理：文晋、sadhu
+编辑：朝花夕拾
 
-乌克兰政府最初于 2021 年 9 月通过了法案，但总统沃洛迪米尔（Volodymyr）要求将其送回议会进行一些修改。四个月后，该法案已正式签署成为法律，现在，代表着通过监管为数字资产所有者、交易所和个人提供保护，迈出了一大步。
-
-乌克兰政府现在预计，随着比特币和其他加密货币的合法化，困扰加密货币行业的邪恶行为，诸如诈骗项目、洗钱、欺诈和其他非法行为等，将大大减少。 此外，预计合法化将在整个领域带来创新，并为那些有兴趣探索新兴技术的人注入信心。
-
-**评论： **
-
-**当文贵先生早在两年前就告诉世界，数字货币的时代即将带来，一定很多人表示怀疑，尤其是见证了比特币的洗清和犯罪行为，更对数字货币望而生畏。但无论人们喜欢与否，数字货币都将是挡不住的历史潮流，尤其是现在看到加拿大政府竟然邪恶到高税盘剥人民劳动价值不说，竟然不顾任何法律随意冻结人们的钱财。更加感叹文贵先生设计的喜币在2021年的11月一日成功上市的巨大历史意义：是人类走向正道主义的根本！没有掌握自己财富安全自由的权利，一切都是徒劳！**
-
-**乌克兰通过的法律，无疑是明智的政府决策。**
-
-**新闻来源**：[tweaktown.com][This country officially legalizes Bitcoin and other cryptocurrencies](https://www.tweaktown.com/news/84651/this-country-officially-legalizes-bitcoin-and-other-cryptocurrencies/index.html) **素材**：**文舞**
-
-* * *
-
-***审核：文乐
-校对：花羽
-发布：信心满满***
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-5.jpeg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/JV4_5ME01ZG_5LC@60.png)图片来源：墨尔本雅典娜农场计组
 
 
+还有一个最关键是什么？ 兄弟姐妹们，这个申请完破产以后，我们到法庭上我们更有独立的，让法官知道我们为什么申请个人破产，过去的几年七哥被陷害。这对于破产法官来讲，你去想想看看。这个事实在这全摆着呢。其实几个案子，多少被陷害？ 刘延平来美国，就是咱把案子从那个法庭移到这个法庭，完全是个心情，所以战友们一定要学到，这个不是开玩笑的，你一定要了解美国的法律，了解你所在国的法律，这是特别特别重要的。 你说七哥每天吃什么喝什么都是全世界公开的，我拥有的什么都是全世界公开。任何一个战友都比你七哥有钱。所以说，兄弟姐妹们这次的破产案，我很多话还不能说。 因为这个刚才已经来告诉我了，不要在直播中谈那么多破产，我不能喊你们可以谈啊！这个让大家要学到法律是多重要。法律是太重要了。这就是西方和中国的不同。 你们想,我在中国那不知道多少罪弄到我头上去了是吧？ 秒间让你消失在人间，是吧？ 这就是真正的西方的伟大。 你可以有这些法律程序，你可以用法律正义来保护你自己的安全，你自己的利益。 这是我们在西方永远要学到的。 你看看那帮孙子路大脑袋郭宝胜还得意呢，他都不知道他噩梦已经到来，他还不知道。还有一个就是老说我们没钱没人，就像共产党老说美国没钱，美国帝国主义，你不要去美国不就完了吗？特别说共产党，美国那么坏，你要把你们儿女私生子女送到美国干什么？ 就像新中国联邦是骗子，是一帮疯子邪教。你别来不就完了吗？ 别参加不就完了吗？是不是，你说哪有一个不要脸 的人个天天去骂一个比自己过得好的人。碍你什么事儿呢？ 你不去不就完了嘛？碍你个蛋的事儿，你不要来不就好，你不看不就完了，你干嘛看呢？谢谢。
+
+*发布：tianzhihuan*
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
