--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,16 +1,46 @@
 ---
-title: 渥太华的一名卡车司机问他是否会离开自由车队。请听他充满勇气、决心和韧性的回答。人们觉得他们要捍卫的东西比要失去的东西更多
+title: 郭先生发布“解救八孩女”悬赏次日,中共政府宣布重启该案调查
 ---
-`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030688/)
+`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2030755/)
 
-作者：东京樱花团视频小组
+作者：纽约香草山农场教育部-—Noemi
 
-校对：东京樱花团视频小组
 
-编辑发布：东京樱花团视频小组
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-40.png)
 
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-1.jpg)
+
+2022年2月17日中午，中共江苏省委省政府突发通告称：决定立即成立“丰县八孩女子”事件的行动调查组，并向公众承诺会彻底查明事实真相。而就在该公告发出的前一晚，郭文贵先生在大直播节目中发布了一则有关“解救八孩女的”悬赏。此次，中共政府紧急发布的这一通告也许就与郭先生的这则悬赏相关。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/131-1-1.jpg)
+据了解，目前已有很多墙内同胞都自发到达该事件的发生地——中共徐州市，并在当地冒着生命危险为“解救八孩女”一事勇敢发声。郭先生知悉此事后就面向公众再次发出了一则悬赏。郭先生称，在未来，这些敢于为“八孩女”事件发声、发推的正义人士，都将会获得一千乃至一万个不等的喜币奖励。而在该悬赏发出后的不到十二小时里，中共政府就突然成立了一个江苏省级的行动调查组，并声称会彻底查明事实真相，严惩该案件的违法犯罪行为，对有关责任人员进行严肃追责，还会将最终的调查结果及时公布于众。
+
+有盖特网友对此评论称，中共政府此次对于“八孩女”事件的态度急转弯则再次体现出了我们新中国联邦、爆料革命的正义力量。
+
+参考来源：
+
+[https://gtv.org/video/id=620cf40c432ae869226d8db5](https://gtv.org/video/id=620cf40c432ae869226d8db5)
+
+[https://www.gettr.com/post/pv0tis1617](https://www.gettr.com/post/pv0tis1617)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-42.jpg)
+
+编辑/校对/发稿：兰兰
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-41.png)
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
