--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,31 +1,47 @@
 ---
-title: 2022/02/17 墙内世界
+title: 《中共的女人》
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2030580/)
+`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2030590/)
 
-1. 2月16日，江苏苏州。中共连续三天通报苏州新增新冠病毒确诊病例，引发苏州市民恐慌。进出苏州城市道路也在全面封锁中。
-2. 2月14日，江西抚州。孩子每次离家外出打工，都不敢回头。老母亲的送别让人泪目。
-3. 2月13日，福建莆田。中国的大部分年轻人们一年到头只有春节才有条件回家团聚短短几天，然后又在家中长辈泪目送别中离开故乡。
-4. 2月16日，河南。母亲准备在孩子熟睡时悄悄离开去外地打工。两个孩子得知泪流满面，不要买好吃的，退还妈妈零用钱。
-5. 2月16日，两位孩子的妈妈独自带两个小孩，因为各种压力，开车的时候忍不住哭了起来…
-6. 2月16日，广东广州。男子从诊室出来后伫立许久，手拿诊断书一动也不动。
-7. 2月15日，上海。子女为能顺利继承房产，将病重老人用担架推至房产过户大厅。
-8. 2月16日，安徽亳（bó）州。女子和丈夫结婚十多年年年还账，今年还完账后妻子边数钱边感叹：心里得劲的很。
-9. 勤劳的中国年青人在工厂工作往往承受着巨大的压力，每个人都是在极度被剥削人权的忍耐下过活，崩溃往往在一瞬间。
-10. 2月14日，被工人曝光的浙江东方基因生物制品股份有限公司在江西吉安的800人“豪华”员工宿舍。
-11. 2月16日，江苏淮安。中共政府的运动式捕狗。中共对公民任何的财产和人命都似乎拥有无限的最终解释权。
+作者—爱战神
+校对/上传—无明逆流
 
+![](https://assets.gnews.org/wp-content/uploads/2022/02/W2-edited.jpeg)图片来源：网络
 
-* * *
+甲：中共匪魔毛贼东，玩完女性一边丢
+乙：日日夜夜新郎做，染上性病不肯治
+丙：有病依旧搞双修，吓得女人如避鬼
+丁：淫魔
+甲：假仁假义发召令，妇女能顶半边天
+乙：解放妇女去工作，家里家外忙不停
+丙：上班辛苦持家累，蓬头垢面是头驴
+丁：女韭菜
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+甲：计划生育政策好，党和政府来养老
+乙：重男轻女陋传统，阴阳比例大失调
+丙：贫穷落后十亿人，光棍娶妻靠捆绑
+丁：老无以
+甲：贩卖女性三千元，年龄大的不值钱
+乙：逃跑砍断手和脚，手铐脚镣铁链子
+丙：赤身裸体鞭抽打，全村男人来轮奸
+丁：悲惨
+甲：致残逼疯生小孩，八九十个小韭菜
+乙：阴曹地府在人间，呼天抢地都不灵
+丙：中共作聋又装哑，动用权力媒体压
+丁：恶之源
 
-
-编辑：【英国伦敦喜庄园编辑部】
-
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+甲：平常女子守清贫，日子难熬倍焦急
+乙：风光女人卖肉体，依附权贵当作天
+丙：除非自身命来好，含着金钥匙出生
+丁：没几个
+甲：中共生育计划变，管你管她生殖器
+乙：一胎二胎变三胎，四胎五胎都可能
+丙：中共女人不是人，就是苦逼猪和牛
+丁：机器
+甲：中共不灭妇女灾，中共不灭灭世界
+乙：新中国联邦崛起，推翻中共有猛劲
+丙：尊重女性是七哥，消灭中共女人喜
+丁：人人喜
 
  
 
