--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,30 +1,18 @@
 ---
-title: 秘翻新闻｜中共规定中小学聘用公检法人员 强制进行政治洗脑
+title: 郭文贵先生发布海外排华警告
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2031021/)
+`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/2031202/)
 
-**By:[秘翻新闻](https://gtv.org/broadcast/watch/62108890b706176dd78d3423)**
+郭文贵先生发布海外排华警告！
 
-**[2022-02-19](https://gtv.org/broadcast/watch/62108890b706176dd78d3423)**
+在以下地区的华人要多注意，包括但不限于：
 
-**今日主题：**
+美国，特别是美国西部；非洲；日本；东欧，特别是俄罗斯。
 
-**1.疑暗讽冬奥赛场肮脏 加拿大队集体“扫奖台”**
+视频来源: 20220218—郭先生大直播
+视频制作: 文星光，梦田
+文案:文星光
 
-**2.中共通过捐款影响美国高等教育**
-
-**3.加拿大警方开始镇压渥太华的抗议者**
-
-**4.美国波士顿取消了出示疫苗接种证明要求**
-
-**5.挪威报告中称 中共有干预西方政治的意愿和能力**
-
-**🔗GTV鏈接：**[https://gtv.org/broadcast/watch/62108890b706176dd78d3423](https://gtv.org/broadcast/watch/62108890b706176dd78d3423)
-
-发布:星星
-
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2022-02-19-171240.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
