--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,21 +1,41 @@
 ---
-title: 习近平面临的问题层出不穷 近期同时做了脾和肾的手术
+title: 美副总统警告俄罗斯，如果入侵乌克兰将受到前所未有的制裁
 ---
-`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/2030950/)
+`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2031199/)
 
-锁链女事件发生地，30年来有近万名无名女尸被发现。该事件也引发了江、胡、习派的问责纠纷，对习家影响巨大，并且引起世界对中共国女性人权的批判。
+素材整理：波士顿五月花 Vicky
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-19-at-8.39.12-PM.png)图片来源：AP
+**慕尼黑（美联社）–美国副总统卡马拉-哈里斯周六警告俄罗斯，如果它入侵乌克兰，它将面临 “前所未有的 “经济代价，并预测这种攻击将使欧洲盟友更接近美国。**
 
-彭帅事件，引发了国内外体育界，明星界对共产党高层的极度不满。
+**哈里斯在德国举行的年度慕尼黑安全会议上发表了讲话，此前乔-拜登总统说他 “确信 “俄罗斯总统弗拉基米尔-普京已经做出入侵邻国的决定。**
 
-冬奥谷爱凌事件，香港疫情大爆发，普京乌克兰争端。习近平面临的问题层出不穷。
+**“让我说清楚，可以绝对肯定地说：如果俄罗斯进一步入侵乌克兰，美国将与我们的盟友和伙伴一起，施加重大的、前所未有的经济代价，”哈里斯说。**
 
-不但如此，统计局内部信息透露，冬奥会花了近600亿，涉及所谓的援助2000多亿，并且党内以冬奥、国际战略等名义往国外疯狂洗钱，各地方政府也极尽所能骗中央的钱。
+**近几个月来，随着俄罗斯在乌克兰边境附近集结了超过15万的军队，西方对入侵的担忧也在升级。**
 
-习近平四面楚歌，近期同时做了脾和肾的手术。
+**哈里斯说，拜登政府及其盟友曾试图与莫斯科真诚接触，以寻求外交解决方案，但没有遇到克里姆林宫的诚意。**
 
-视频来源: 20220218—郭先生大直播
-视频制作: 文星光，梦田
-文案:文星光
+**“哈里斯说：”俄罗斯继续说它准备会谈，而同时却缩小了外交途径。”他们的行动根本不符合他们的言辞。”**
+
+**哈里斯称赞欧洲盟友在最新的乌克兰危机发生时以基本统一的声音说话。这位副总统说，华盛顿的共和党人和民主党人—他们在许多重大问题上很少达成一致，但是这次在对抗普京的必要性方面基本上达成了一致。**
+
+**“哈里斯说：”我们走到一起，现在正以统一的声音说话。**
+
+**哈里斯周五在会议期间会见爱沙尼亚、拉脱维亚和立陶宛领导人时宣布，”我们最大的力量是我们的团结”。波罗的海国家要求美国增加其在北约东部边缘的驻军。**
+
+**哈里斯说：“我们将进一步加强我们在东翼的北约盟友”。**
+
+**随着酝酿中的危机日趋复杂，拜登和其他政府官员发出了越来越可怕的警告：外交的窗口已经很窄。**
+
+**拜登周五告诉记者，他认为普京已经决定在未来几天进行入侵，采取的军事行动可能远远超出乌克兰东部有争议的顿巴斯地区，包括首都基辅。**
+
+**近年来，美国和俄罗斯领导人都曾利用慕尼黑会议在重要的听众面前传递关键信息。**
+
+参考链接：[Harris warns Russia of unprecedented sanctions if it invades](https://apnews.com/article/russia-ukraine-joe-biden-united-states-europe-vladimir-putin-0bf64906713725d75535cf8912e0b9ee?traffic_source=Connatix)
+
+* * *
+
+*编辑&发布：Vicky*
 
  
 
