--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,40 +1,23 @@
 ---
-title: 俄乌局势再添变数，顿巴斯停火协议地区民用设施遭炮袭
+title: 美通过《2022年美国竞争法》，防止中共企业垄断
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2030906/)
+`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/2031169/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-315.jpeg)
-撰文：台湾宝岛农场   快慢机
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-316.jpeg)
-当地时间2月17日，乌克兰东部顿巴斯停火协议区内的一所民间幼儿园，在亲俄武装所发起的炮袭行动中被击中。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-314.jpeg)
-据悉，一直驻守在乌克兰东部顿巴斯停火协议区内的欧安组织监督观察人员记录发现，近期在该区域内已经相继接连发生了数起，有关乌克兰政府军与顿巴斯亲俄武装的接触性交火及远程炮袭事件。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-313.jpeg)
-这次在炮袭中受损的乌克兰民间幼儿园，其中一间教室的墙壁被炮弹击穿，但所幸并未造成人员伤亡。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-312.jpeg)
-乌克兰总统泽连斯基随后就2月17日发生的顿巴斯停火协议区内民用幼儿园遭炮袭一事对外界表示，这是该区域亲俄武装对停火协议的“重大挑衅”！
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-311.jpeg)
-然而，顿巴斯地区的亲俄武装则对外宣称，是由于乌克兰政府军此前率先用迫击炮对其锋线阵地实施轰炸后，他们才被迫回应发起炮袭反击。双方各执一词，相互指责违反停火协议错不在己。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-310.jpeg)
-与此同时，俄军一支重装突击力量，正在距离乌克兰首都基辅近在咫尺的，白俄罗斯与乌克兰边境地区“切尔诺贝利”附近完成集结。莫斯科的这一部署显然并未完全放松对乌克兰的军事威慑，反而有随时直取其首都基辅之势。
+[撰稿日期]：2022.02.16
 
-反观北约也并未就2月15日，普京下令部分俄乌边境演习部队后撤，所作出的表面性妥协而放松警惕。北约秘书长斯托尔滕贝格仍旧对乌克兰加入北约而不断寻求努力，为应对俄罗斯进一步可能随时采取的激进动作，北约正在考虑向其东南部的罗马尼亚方向增派一支快速反应战斗群，以加强该区域的对俄防御反击能力。
+[署名]：台湾宝岛农场\_阿尔道夫
 
-值得一提的是，就在顿巴斯停火协议地区发生炮袭事件，以及北约秘书长对外表示要加强对俄罗斯的激进态势作出及时有效回应的同时，莫斯科方面却突然毫无征兆的作出了，对美国驻俄罗斯副大使“戈尔曼”立即驱逐出境的行动。克里姆林宫此举并不排除是对白宫近期，接连宣称俄军会随时对乌克兰采取突袭行动言论的战术回应。
+[新闻连接]：《https://www.epochtimes.com/b5/22/2/15/n13577942.htm》
 
-此文仅代表笔者个人观点！
+[正文]
 
-资料链接：[https://www.sohu.com/a/523576991\_123753](https://www.sohu.com/a/523576991_123753)
+年来，因中共积极游说国际电信联盟（ITU）、国际电工委员会（IEC）等机构，让中共的企业获得竞争优势。面对此冲击，美在北京冬奥开幕当天通过《2022年美国竞争法》，旨在促进美半导体制造业，抵消中共扭曲市场的贸易行为，包括加强反倾销规则等。
 
-[https://www.sohu.com/a/523530652\_260616](https://www.sohu.com/a/523530652_260616)
+美国也和日本连手建立6G无人化技术的国际标准，防止中共企业垄断；并强化尖端技术保护，防范中俄经济间谍战。
 
-* * *
+欧盟主管竞争事务的执委维斯塔哲（Margrethe Vestager）表示，中共近期也重新定义网络的基本标准，也因而让中共对使用国有网络的使用者有更大的控制权，因此，欧盟委员会也提出对行业标准系统实施改革，藉以避免欧洲的数码产业等沦为被中共主导、垄断的惨境。
 
-***更多资讯***
-[台湾农场精彩文章](https://gnews.org/zh-hant/author/taiwangnews/)
-[台湾农场精彩直播影片](https://gtv.org/user/5f60d588245d3c0579acdbec)
-[订阅台湾宝岛农场官方YOUTUBE频道](https://www.youtube.com/channel/UCXlInG8cGCHSN5y54zcgoOw/videos)
-[点击此处加入「台湾宝岛农场」Discord伺服器](https://discord.gg/zE5xTQzArt)
+然而，北京大学在其报告中却罕见承认，美中科技脱钩后，中共无论在技术面或产业面等明显落后，尤其是芯片制造、人工智能及信息科技产业等，更会面临发展瓶颈，可说中共的损失比美国更大，然而却因滥中共立场反调而被火速删除，足见中共对言论思想的极端宰制，同时某种程度也印证了中共的野心。
 
  
 
