--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,47 +1,40 @@
 ---
-title: 徐州女孩实名举报中共暴力强拆致人重伤
+title: 背弃《巴黎气候协定》，中共国增加使用煤炭能源
 ---
-`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2030887/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2031035/)
 
-作者：香草山健身部-新世界的一员
+#### 【雅典娜快讯】，紧贴时代脉搏
 
+翻译：攀登者
+编辑：文泓
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good-42.png)
-2022年2月16日，江苏徐州丰县欢口镇女孩实名举报欢口镇拆迁办雇佣社会无业游民强制执行暴力拆迁，对虹口村断桥段路阻止村民出行，并用辣椒水等各种暴力威胁方法强迫村民签字同意拆迁。强制拆迁过程中，该女孩父亲被打至重伤。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/22-7.png)
-举报女孩称：2021年12月17日，刘宁、汪雪峰带领雇佣的社会无业人员开着挖掘机进村并对该村断桥段路断电，迫使村民签字同意。无业人员进入女孩爸爸家先摧毁安装好的监控再断电，然后非法破门而入，强迫签字不成就把老人家带到拆迁办办公室关门群殴，并逼着签字。这种行为致使老人右侧三根肋骨骨折、右侧眼眶和鼻子骨骨折、前侧颚骨骨折、折合颚骨粉碎性骨折，几家当地医院不敢接收。报警之后的几天也无人处理，更别说把打人者绳之以法了。
-
-女孩哭诉，女孩母亲日夜哭泣，要照顾刚出生的小侄女，弟弟在医院陪护伟在旦夕的父亲。女孩天天求天天不应，求地地无门，身单力薄，走投无路，只好录视频网上求助，希望能求得媒体关注。
-
-中共对农村的拆迁有相应的政策，但是中共国的农村却遭遇暴力强拆，且强拆造成对无辜人员对伤害无人关注。中共设立的法律形同虚设。
-
-参考来源：
-
-[https://gettr.com/post/pv15dm50c3](https://gettr.com/post/pv15dm50c3)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/3-54.png)图片来源：HubPages|
 
 
+据中共官媒新华社[报道](http://www.xinhuanet.com/english/20220215/2971ca648ff04357a15d0ddf83707464/c.html)，在总理李克强主持的中国国务院会议上，中国重申了其增加使用煤炭能源的立场，以“保护生产和日常生活中的用电量”。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-43.jpg)
+中国是世界上最大的污染国[，](https://www.bbc.co.uk/news/world-asia-57018837)2019年[排放](https://www.bbc.co.uk/news/world-asia-57018837)了约27%的世界温室气体，第二大排放国美国仅排放了世界11%的污染——不到中国总排放量的50%。
 
-编辑/校对/发稿：兰兰
+尽管中国最初于2016年签署了联合国《[巴黎气候协定](https://www.breitbart.com/politics/2017/06/02/liberal-states-cities-ask-u-n-to-let-them-join-paris-agreement-raising-legal-questions/)》，该协议旨在将全球气温上升控制在2°C以下，并在2021年与美国的联合声明中重申了减少排放的承诺，**但在疫情期间，中国增加了煤炭产量****，在2021****年达到使用**[**40多亿**](https://www.theguardian.com/environment/2022/jan/17/chinas-coal-production-hit-record-levels-in-2021)**吨煤炭的十年新高**。
 
-**更多资讯，更多关注**
+煤炭使用的增加表明，中国已不可能履行其到2030年达到排放峰值并在2060年实现碳中和的国际承诺。
 
-[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+这个共产主义国家的能源掉头是在中国经济因国际燃料短缺而受抑制后出现的（例如，抵制澳洲煤炭），冠状病毒大流行导致这个国家14亿人多次停电。
 
-[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+此后，中共独裁政权[下令](https://www.france24.com/en/live-news/20220216-china-govt-to-help-run-coal-power-plants-at-full-capacity)重新开放国内煤矿，并取消减排生产配额，这意味着中国的煤电厂将满负荷运营。
 
-[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+**当西方人口被迫**[**勒紧裤腰带**](https://www.breitbart.com/national-security/2010/12/05/obama-ban-of-offshore-oil-drilling-undermining-our-country/)**并应对绿色能源政策的昂贵**[**影响时**](https://www.dailymail.co.uk/debate/article-10366275/ROSS-CLARK-DOES-green-tax-energy-bill-actually-pay-for.html)**，中共国主席习近平告诉他的政府，任何减少中国排放的努力都不应干涉中国的经济增长**——这表明中国在不久的将来不会做出任何有意义的改变来遏制其排放。
 
-[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+新闻链接：[China Goes All in on Coal: Ramps Power Output to Full Capacity (breitbart.com)](https://www.breitbart.com/asia/2022/02/16/china-goes-all-in-on-coal-ramps-power-output-to-full-capacity/)
 
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+*发布：tianzhihuan*
 
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good-43.png)
-
-
-
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
 
