--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,44 +1,30 @@
 ---
-title: 一起中共间谍涉嫌走私军事装备背后的阴谋
+title: 秘翻新闻｜中共规定中小学聘用公检法人员 强制进行政治洗脑
 ---
-`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/2030852/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2031021/)
 
-#### **【雅典娜观察】和您一起洞察世界**
+**By:[秘翻新闻](https://gtv.org/broadcast/watch/62108890b706176dd78d3423)**
 
-翻译/编辑：文泓
+**[2022-02-19](https://gtv.org/broadcast/watch/62108890b706176dd78d3423)**
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/3-53.png)
+**今日主题：**
 
+**1.疑暗讽冬奥赛场肮脏 加拿大队集体“扫奖台”**
 
-本周，澳大利亚议会被中共国有影响力指控案件所困扰。周五，昆士兰地方法院审理了64岁的华裔黄金海岸会计师Kim李博伟和63岁的俄罗斯裔布里斯班企业家亚历山大·谢尔被指控违反了澳大利亚《国防贸易管制法》。
+**2.中共通过捐款影响美国高等教育**
 
-多方消息来源称，指控源于澳大利亚安全情报组织（ASIO）对一个在澳运作的中共间谍网络的更广泛调查。**早在****2016****年****8****月，澳大利亚官员拦截了一架由澳洲赌场组织的、从黄金海岸飞往新西兰的不寻常的私人飞机航班，就发现了这个网络的成员。**
+**3.加拿大警方开始镇压渥太华的抗议者**
 
-李先生是该航班上的六名乘客之一。其他乘客包括习近平主席的表弟齐明、墨尔本有组织犯罪头目和赌场旅行团经营者号称唐人街先生周九明，以及另一个被怀疑与中国情报部门有关的人物。
+**4.美国波士顿取消了出示疫苗接种证明要求**
 
-由于齐明与习家的关系，以及他与墨尔本的中国犯罪人物和中共特工的关系，而且齐明曾为中兴通讯工作，该公司与中国军工综合体的关系有案可查，ASIO对齐特别关注。
+**5.挪威报告中称 中共有干预西方政治的意愿和能力**
 
-布里斯班地方法院周五听取了李博伟和谢尔被指控与另一名中国公民和前墨尔本商人布莱恩·陈合作，**陈现在躲在海外，是国际刑警组织红色通报的对象。**
+**🔗GTV鏈接：**[https://gtv.org/broadcast/watch/62108890b706176dd78d3423](https://gtv.org/broadcast/watch/62108890b706176dd78d3423)
 
-ASIO消息人士称，**布莱恩·陈是第一个在澳大利亚被揭发的中共情报嫌疑人员，在****2019****年底也被多家澳洲媒体列入调查的一部分，并公布了陈先生曾试图渗透到澳大利亚议会的指控。**这些报道详细介绍了ASIO的一名线人声称，陈先生曾试图通过扶植维多利亚州自由党成员赵波成为议员，从而在联邦议会安插一名间谍。
+发布:星星
 
-2019年，陈成为ASIO强烈关注的对象。在此之前，他住在墨尔本，经营着几家企业。他还被列为几家香港和中国大陆公司的董事和股东，与中国军事采购业有很深的关系。
-
-然而，赵波于2019年3月意外死亡，此前他告诉ASIO官员，陈先生曾向他提供100万澳元，供他竞选联邦议会席位。ASIO官员于2019年3月在墨尔本机场询问了陈先生，但他随后被允许离开澳大利亚。
-
-作为对这些披露的回应，ASIO局长迈克·伯吉斯发表了一份公开声明，称其目前正在“认真对待”有关涉嫌干预阴谋的指控。
-
-新闻链接：[Alexander Cher, Brian Chen accused of smuggling military equipment by AFP (smh.com.au)](https://www.smh.com.au/national/afp-uncovers-suspected-chinese-spy-s-alleged-plot-to-smuggle-military-equipment-20220218-p59xld.html)
-
-*发布：tianzhihuan*
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2022-02-19-171240.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
