--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,21 +1,21 @@
 ---
-title: 澳大利亚警方承认对堪培拉抗议民众使用了LRAD装置
+title: 北京冬奥委会是场巨大政治秀
 ---
-`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/2031254/)
+`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/2031496/)
 
-作者：台湾宝岛农场 寻文客
+[撰稿日期]：2022.02.19
 
+[署名]：台湾宝岛农场dobi
 
+[新闻连接]：《https://www.epochtimes.com/b5/22/2/19/n13588250.htm》
 
-**【新闻链接】**[https://www.rebelnews.com/police\_confirm\_use\_of\_controversial\_lrad\_device\_at\_canberra\_protest](https://www.rebelnews.com/police_confirm_use_of_controversial_lrad_device_at_canberra_protest)
+[正文]：
 
-**据外媒****2****月****18****日报导，澳大利亚首都地区警方承认，在堪培拉议会大厦外的自由车队集会期间，他们使用了长距离声学装置（****LRAD****）。**
+据外媒报导，拉脱维亚曾获两届冬奥委会铜牌得主，目前担任该国国家队教练的马丁斯‧鲁本尼斯（Martins Rubenis），今受访时，表示本届冬奥简直是一场「巨大政治秀」，充分展现了他对本届冬奥主办国中共政权的蔑视与不满。
 
-**LRAD****装置有两种模式。一种为传递信息的扩音装置，另一种则是控制人群的****“****声波武器****”****。****LRAD****装置在人群中的使用存在极大争议性，如纽约市警察局曾向联邦法庭建议停止对处于警戒状态的抗议者使用****LRAD****装置。**
+鲁本尼斯告诉媒体：当他和选手抵达中国时，感觉像被当作瘟疫一样地对待；然而，只要有媒体或公开场所时，中共却在在无所不用其极制造假象，展示一场场「你看，这里的一切多么美好」的虚假政治秀，甚至质疑中共有严重的人权记录瑕疵，为何还能获得主办权？!
 
-**LRAD****装置在堪培拉的使用让很多公众观察家感到震惊，因为****LRAD****装置本质是一种人群控制声波武器。在非扩音设置下使用****LRAD****装置及其危险，已知会造成永久性听力损伤、脑损伤等结果。**
-
-**据悉，澳大利亚联邦警察、昆士兰州警察、南澳大利亚州警察、西澳大利亚州警察和澳大利亚维多利亚州警察都证实他们已经购买了****LRAD****装置。**
+甚至鲁本尼斯也透露：「很多运动员、教练也都谈论过这个问题。」且尽管大家对于中共的虚假、作秀仍感到十分不解，但鲁本尼斯转念一想：「现在让全世界都有机会看到中共的真面目，应该也算是一件好事吧」。 或许诚如鲁本尼斯所言，尽管北京冬奥给了中共一个盛大的政治秀舞台，对全世界展演了一场表面上看起来「你看，这里的一切多么美好」的华丽、风光政治秀，然而，却也同时给了全世界一认清中共虚伪政权，揭开中共虚假谎言，吹起反共集结号角声的机会。因此，对全世界来说，此次北京冬奥究竟谁才是最大输家？
 
  
 
