--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,40 +1,19 @@
 ---
-title: 俄乌局势再添变数，顿巴斯停火协议地区民用设施遭炮袭
+title: 新加坡不再适合久留 李家江山的争夺 华人恐成牺牲品
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2030906/)
+`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/2031350/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-315.jpeg)
-撰文：台湾宝岛农场   快慢机
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-316.jpeg)
-当地时间2月17日，乌克兰东部顿巴斯停火协议区内的一所民间幼儿园，在亲俄武装所发起的炮袭行动中被击中。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-314.jpeg)
-据悉，一直驻守在乌克兰东部顿巴斯停火协议区内的欧安组织监督观察人员记录发现，近期在该区域内已经相继接连发生了数起，有关乌克兰政府军与顿巴斯亲俄武装的接触性交火及远程炮袭事件。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-313.jpeg)
-这次在炮袭中受损的乌克兰民间幼儿园，其中一间教室的墙壁被炮弹击穿，但所幸并未造成人员伤亡。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-312.jpeg)
-乌克兰总统泽连斯基随后就2月17日发生的顿巴斯停火协议区内民用幼儿园遭炮袭一事对外界表示，这是该区域亲俄武装对停火协议的“重大挑衅”！
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-311.jpeg)
-然而，顿巴斯地区的亲俄武装则对外宣称，是由于乌克兰政府军此前率先用迫击炮对其锋线阵地实施轰炸后，他们才被迫回应发起炮袭反击。双方各执一词，相互指责违反停火协议错不在己。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-310.jpeg)
-与此同时，俄军一支重装突击力量，正在距离乌克兰首都基辅近在咫尺的，白俄罗斯与乌克兰边境地区“切尔诺贝利”附近完成集结。莫斯科的这一部署显然并未完全放松对乌克兰的军事威慑，反而有随时直取其首都基辅之势。
+新加坡是共产党家族绝对要控制的地方，习、江、孟、王家都藏了大量钱在新加坡。
 
-反观北约也并未就2月15日，普京下令部分俄乌边境演习部队后撤，所作出的表面性妥协而放松警惕。北约秘书长斯托尔滕贝格仍旧对乌克兰加入北约而不断寻求努力，为应对俄罗斯进一步可能随时采取的激进动作，北约正在考虑向其东南部的罗马尼亚方向增派一支快速反应战斗群，以加强该区域的对俄防御反击能力。
+卢森堡是中共藏钱最多的地方，然后就是新加坡、瑞士等。
 
-值得一提的是，就在顿巴斯停火协议地区发生炮袭事件，以及北约秘书长对外表示要加强对俄罗斯的激进态势作出及时有效回应的同时，莫斯科方面却突然毫无征兆的作出了，对美国驻俄罗斯副大使“戈尔曼”立即驱逐出境的行动。克里姆林宫此举并不排除是对白宫近期，接连宣称俄军会随时对乌克兰采取突袭行动言论的战术回应。
+新加坡疫苗会很快停下，李家已意识到疫苗可能会给新加坡带来灭顶之灾，最终会跟随美国。
 
-此文仅代表笔者个人观点！
+新加坡不再适合久留。李家江山的争夺，将造成动乱，会以华人为攻击目标，同时美国为了干掉共产党，也会干掉新加坡。
 
-资料链接：[https://www.sohu.com/a/523576991\_123753](https://www.sohu.com/a/523576991_123753)
-
-[https://www.sohu.com/a/523530652\_260616](https://www.sohu.com/a/523530652_260616)
-
-* * *
-
-***更多资讯***
-[台湾农场精彩文章](https://gnews.org/zh-hant/author/taiwangnews/)
-[台湾农场精彩直播影片](https://gtv.org/user/5f60d588245d3c0579acdbec)
-[订阅台湾宝岛农场官方YOUTUBE频道](https://www.youtube.com/channel/UCXlInG8cGCHSN5y54zcgoOw/videos)
-[点击此处加入「台湾宝岛农场」Discord伺服器](https://discord.gg/zE5xTQzArt)
+视频来源: 20220218—郭先生大直播
+视频制作: 文星光，梦田
+文案:文星光
 
  
 
