--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,47 +1,17 @@
 ---
-title: 徐州女孩实名举报中共暴力强拆致人重伤
+title: 邪恶共产党把全人类的手机都监听了 灭共才是硬道理
 ---
-`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2030887/)
+`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/2031247/)
 
-作者：香草山健身部-新世界的一员
+微信就是网络技术核武器。马化腾背后是胡锦涛，他的老板是毛道临和胡海青，并且二部和三部是微信最大的技术支持。
 
+抖音，微信，百度，知乎，香港凤凰等，只要是中共国的软件/APP，用了手机基本就被监视、监听了。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good-42.png)
-2022年2月16日，江苏徐州丰县欢口镇女孩实名举报欢口镇拆迁办雇佣社会无业游民强制执行暴力拆迁，对虹口村断桥段路阻止村民出行，并用辣椒水等各种暴力威胁方法强迫村民签字同意拆迁。强制拆迁过程中，该女孩父亲被打至重伤。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/22-7.png)
-举报女孩称：2021年12月17日，刘宁、汪雪峰带领雇佣的社会无业人员开着挖掘机进村并对该村断桥段路断电，迫使村民签字同意。无业人员进入女孩爸爸家先摧毁安装好的监控再断电，然后非法破门而入，强迫签字不成就把老人家带到拆迁办办公室关门群殴，并逼着签字。这种行为致使老人右侧三根肋骨骨折、右侧眼眶和鼻子骨骨折、前侧颚骨骨折、折合颚骨粉碎性骨折，几家当地医院不敢接收。报警之后的几天也无人处理，更别说把打人者绳之以法了。
+北京西山凤凰岭几十万人盯着美国人的手机，一点秘密都没有。邪恶共产党把全人类的手机都监听了，担心隐私泄露完全没有意义，灭共才是硬道理。
 
-女孩哭诉，女孩母亲日夜哭泣，要照顾刚出生的小侄女，弟弟在医院陪护伟在旦夕的父亲。女孩天天求天天不应，求地地无门，身单力薄，走投无路，只好录视频网上求助，希望能求得媒体关注。
-
-中共对农村的拆迁有相应的政策，但是中共国的农村却遭遇暴力强拆，且强拆造成对无辜人员对伤害无人关注。中共设立的法律形同虚设。
-
-参考来源：
-
-[https://gettr.com/post/pv15dm50c3](https://gettr.com/post/pv15dm50c3)
-
-
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-43.jpg)
-
-编辑/校对/发稿：兰兰
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
-
-[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
-
-[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
-
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/good-43.png)
-
-
-
+视频来源: 20220218—郭先生大直播
+视频制作: 文星光，梦田
+文案:文星光
 
  
 
