--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,31 +1,41 @@
 ---
-title: 中共将在每一所学校安插属于它的法治副校长
+title: 美副总统警告俄罗斯，如果入侵乌克兰将受到前所未有的制裁
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2030848/)
+`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2031199/)
 
-作者 台湾宝岛农场 Y.M.O
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-309.jpeg)
-2022年2月17日中共国教育部发文，为进一步规范中小学法治副校长聘任与管理，健全学生权益保护机制，促进未成年人健康成长，教育部在此前工作的基础上，经商最高人民法院、最高人民检察院、公安部、司法部同意，制定颁布了《中小学法治副校长聘任与管理办法》（教育部令第52号，以下简称《办法》），于2022年5月1日起实施。《办法》根据预防未成年人犯罪法等法律规定，全面总结了法治副校长工作的经验与做法，针对实践中的问题，突出将法治副校长纳入中小学治理体系、全面健全未成年人权益保护机制的新要求，系统设计了中小学法治副校长聘任与管理制度。
+素材整理：波士顿五月花 Vicky
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-19-at-8.39.12-PM.png)图片来源：AP
+**慕尼黑（美联社）–美国副总统卡马拉-哈里斯周六警告俄罗斯，如果它入侵乌克兰，它将面临 “前所未有的 “经济代价，并预测这种攻击将使欧洲盟友更接近美国。**
 
-在发文的同时中共国教育部也就这件事召开了新闻发布会，从这次新闻发布会中也能看出一些具体情况。有记者提问《办法》中提到法治副校长的来源主要是人民法院、人民检察院、公安机关和司法行政部门，现实情况有很多中小学法治副校长是来自于法学教育领域或者法律服务机构。教育部的回复是对此不调整也不禁止，只是要求每个学校必须有一名法治副校长来自人民法院、人民检察院、公安机关和司法行政部门。说白了教育部所提到的法治根本名不副实，你看它根本不信任社会上的法律界人士，在意的只是每个学校有没有属于中共体系内的人员罢了。
+**哈里斯在德国举行的年度慕尼黑安全会议上发表了讲话，此前乔-拜登总统说他 “确信 “俄罗斯总统弗拉基米尔-普京已经做出入侵邻国的决定。**
 
-就算你让每个学校都配一名你控制的法治副校长，真的能解决这些校园霸凌的问题么。近日衡水桃城中学被曝出存在多项违规行为导致学生抑郁。虽然官方说桃城区委区政府已成立联合调查组进驻桃城中学开展全面事实核查，然而不止这所学校其它很多地方的学生都在评论这种现象非常普遍。并且是老师帮助上等学生在欺负下等学生。这里先不讨论上下等的问题，就现实角度来说如果想在不动体制的情况下解决校园霸凌的问题那等于至少一半的师生都要被追究责任，人都没了这些法治副校长也就没有存在的意义，所以嘴上提到要针对校园霸凌其实只是说说而已。
+**“让我说清楚，可以绝对肯定地说：如果俄罗斯进一步入侵乌克兰，美国将与我们的盟友和伙伴一起，施加重大的、前所未有的经济代价，”哈里斯说。**
 
-与其说要针对校园霸凌，所谓普法教育那段讲得还算是不那么虚伪。看看新闻发布会里讲的这段，“深入学习贯彻习近平法治思想，继续把青少年作为全民普法的重点对象。全面推动习近平法治思想融入学校教育，配合教育部等有关部门做好习近平法治思想进教材、进课堂、进头脑工作。深入开展宪法、民法典、《未成年人保护法》《预防未成年人犯罪法》《家庭教育促进法》等法律法规的学习宣传，教育引导青少年从小树立法治信仰，坚定不移走中国特色社会主义法治道路。”简单来说就是让青少年忘记真正的自由民主，从一开始就只能学习大神的思想，只能信仰习大神的理念。毕竟法院、检察院、公安部门都是中共开的，以前通过教育部门来贯彻上级指示，现在又多了中共的政法机构这一条途径，上层的掌控力看上去更加牢固，而学校里的人们呼吸将会更加困难。
+**近几个月来，随着俄罗斯在乌克兰边境附近集结了超过15万的军队，西方对入侵的担忧也在升级。**
 
-新闻链接
+**哈里斯说，拜登政府及其盟友曾试图与莫斯科真诚接触，以寻求外交解决方案，但没有遇到克里姆林宫的诚意。**
 
-[http://www.moe.gov.cn/jyb\_xwfb/gzdt\_gzdt/s5987/202202/t20220217\_599924.html](http://www.moe.gov.cn/jyb_xwfb/gzdt_gzdt/s5987/202202/t20220217_599924.html)
+**“哈里斯说：”俄罗斯继续说它准备会谈，而同时却缩小了外交途径。”他们的行动根本不符合他们的言辞。”**
 
-[http://www.moe.gov.cn/fbh/live/2022/53969/](http://www.moe.gov.cn/fbh/live/2022/53969/)
+**哈里斯称赞欧洲盟友在最新的乌克兰危机发生时以基本统一的声音说话。这位副总统说，华盛顿的共和党人和民主党人—他们在许多重大问题上很少达成一致，但是这次在对抗普京的必要性方面基本上达成了一致。**
+
+**“哈里斯说：”我们走到一起，现在正以统一的声音说话。**
+
+**哈里斯周五在会议期间会见爱沙尼亚、拉脱维亚和立陶宛领导人时宣布，”我们最大的力量是我们的团结”。波罗的海国家要求美国增加其在北约东部边缘的驻军。**
+
+**哈里斯说：“我们将进一步加强我们在东翼的北约盟友”。**
+
+**随着酝酿中的危机日趋复杂，拜登和其他政府官员发出了越来越可怕的警告：外交的窗口已经很窄。**
+
+**拜登周五告诉记者，他认为普京已经决定在未来几天进行入侵，采取的军事行动可能远远超出乌克兰东部有争议的顿巴斯地区，包括首都基辅。**
+
+**近年来，美国和俄罗斯领导人都曾利用慕尼黑会议在重要的听众面前传递关键信息。**
+
+参考链接：[Harris warns Russia of unprecedented sanctions if it invades](https://apnews.com/article/russia-ukraine-joe-biden-united-states-europe-vladimir-putin-0bf64906713725d75535cf8912e0b9ee?traffic_source=Connatix)
 
 * * *
 
-***更多资讯***
-[台湾农场精彩文章](https://gnews.org/zh-hant/author/taiwangnews/)
-[台湾农场精彩直播影片](https://gtv.org/user/5f60d588245d3c0579acdbec)
-[订阅台湾宝岛农场官方YOUTUBE频道](https://www.youtube.com/channel/UCXlInG8cGCHSN5y54zcgoOw/videos)
-[点击此处加入「台湾宝岛农场」Discord伺服器](https://discord.gg/zE5xTQzArt)
+*编辑&发布：Vicky*
 
  
 
