--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,43 +1,25 @@
 ---
-title: 为什么我们不调查运动员猝死的激增？
+title: 新的卫星图像显示，俄罗斯在乌克兰边境增派直升机
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2030793/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2031066/)
 
-**编译： Jenny Ball**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip为什么我们不调查运动员猝死的激增？.png)图片来源：childrenshealthdefense.org
-故事概览：
+撰稿：东京樱花团/百花李香
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1783.png)图片来自本文网站
+2月19日CNN要闻在线消息：美国Maxar Technologies公司的新卫星图像显示，部署在乌克兰边境附近的俄罗斯直升机数量有明显增加。
 
-- 英国足球传奇人物和体育评论员马特·勒蒂西尔（Matt Le Tissier）一直在谈论大量运动员在球场上倒下或死亡，并因此失去工作。
+根据Maxar的分析，一支新的直升机部队和一个由坦克和装甲车组成的战斗群已被部署在距离乌克兰边境16公里的米列罗沃机场。另外，一支拥有20多架直升机的部队也被部署在位于乌克兰边境以东约27公里的巴布鲁伊斯基附近。而且与之前的图像一样，近20架直升机仍然部署在乌克兰边境以东约35公里的别尔哥罗德附近。
 
+CNN证实的社交媒体上的一段视频显示，攻击直升机部署在巴布鲁伊斯基和别尔哥罗德附近的两个机场。
 
-勒蒂西尔表示，他踢足球的 17 年里，从未见过这样的事情——他呼吁对这些事件进行调查，并表示，无视这些是官员们的“严重失职”。
+俄罗斯国防部本周早些时候宣布，正在将一部分部队从乌克兰撤回基地。作为撤离的证据，甚至发布了一段载有大量坦克的火车的视频。
 
-- 事实核查人员和政府官员，正试图否定或抹黑支持这种理论的信息，即 mRNA 注射是造成伤害和突然死亡的原因，他们故意无视对这些指控的调查。
-- 疫苗不良事件报告系统 (VAERS)，仅仅反映普通人群中运动员的受伤情况，但这些突然死亡的报告可能远未发布。
+然而，过去一周出现的卫星图像和SNS视频显示，俄罗斯的坦克、弹道导弹正往乌克兰边境地区驶去，尤其是北部和东北部。
 
+信息源：[ロシア、ウクライナ国境のヘリ部隊を増強　新たな衛星画像で判明](text=%E3%83%88%E3%83%94%E3%83%83%E3%82%AF%E3%82%B9%E4%B8%80%E8%A6%A7-,%E3%83%AD%E3%82%B7%E3%82%A2%E3%80%81%E3%82%A6%E3%82%)
 
-随着时间的推移，因 COVID mRNA 注射而遭受悲惨后果的人的名单越来越长。
-
-其中许多人和他们的故事一直被掩盖在公众视野之外。YouTube、Instagram、Facebook 和其他社交媒体平台已经审查掉了记录他们受伤和永久性残疾的个人故事和视频，因此，那些只阅读主流媒体的人并没有意识到以科学的名义造成的巨大破坏。
-
-然而，有一部分人的伤亡情况已被公开。在过去的六个月里，一大批专业和业余运动员在赛场上倒下身亡。然而，主流媒体似乎从容应对，表现得好像正在发生的事情是完全正常的。
-
-但是，正如马特·勒蒂西尔在视频的前几秒中所描述的，这远非正常。马特·勒蒂西尔是一位足球传奇人物。在离开这项运动成为体育评论员之前，他在球场上的实力为他赢得了“乐神”的绰号，最近一次是在天空体育。
-
-正如他在采访中所描述的那样，他失去了这份工作，因为他大声疾呼，并引起人们对世界各地专业和业余运动员发生的大量无法解释的心源性猝死的关注。
-
-“我希望有人调查一下。我们可以回顾过去 15 年或 20 年……看看 10 年前发生了多少次猝死，再看看去年又发生了多少次。我一直在看很多体育赛事和很多关于足球的报道，我从来没有见过这样的事情，因为人群中的紧急情况，比赛而被打断的数量之高。”
-
-**新闻来源**：[childrenshealthdefense.org][Why Aren’t We Investigating Surge in Sudden Deaths of Athletes?](https://childrenshealthdefense.org/defender/surge-sudden-deaths-athletes/?utm_source=salsa&amp;eType=EmailBlastContent&amp;eId=f435bd0c-985a-4c45-a627-5d4df1da646b)
-
-* * *
-
-***审核：文乐
-校对：花羽
-发布：信心满满***
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-5.jpeg)
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
