--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,13 +1,15 @@
 ---
-title: 邪恶共产党把全人类的手机都监听了 灭共才是硬道理
+title: 新加坡不再适合久留 李家江山的争夺 华人恐成牺牲品
 ---
-`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/2031247/)
+`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/2031492/)
 
-微信就是网络技术核武器。马化腾背后是胡锦涛，他的老板是毛道临和胡海青，并且二部和三部是微信最大的技术支持。
+新加坡是共产党家族绝对要控制的地方，习、江、孟、王家都藏了大量钱在新加坡。
 
-抖音，微信，百度，知乎，香港凤凰等，只要是中共国的软件/APP，用了手机基本就被监视、监听了。
+卢森堡是中共藏钱最多的地方，然后就是新加坡、瑞士等。
 
-北京西山凤凰岭几十万人盯着美国人的手机，一点秘密都没有。邪恶共产党把全人类的手机都监听了，担心隐私泄露完全没有意义，灭共才是硬道理。
+新加坡疫苗会很快停下，李家已意识到疫苗可能会给新加坡带来灭顶之灾，最终会跟随美国。
+
+新加坡不再适合久留。李家江山的争夺，将造成动乱，会以华人为攻击目标，同时美国为了干掉共产党，也会干掉新加坡。
 
 视频来源: 20220218—郭先生大直播
 视频制作: 文星光，梦田
