--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,15 +1,31 @@
 ---
-title: 破产申请是遵循法律依据
+title: 背弃《巴黎气候协定》，中共国增加使用煤炭能源
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2030784/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2031035/)
 
-整理：文晋、sadhu
-编辑：朝花夕拾
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/JV4_5ME01ZG_5LC@60.png)图片来源：墨尔本雅典娜农场计组
+翻译：攀登者
+编辑：文泓
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/3-54.png)图片来源：HubPages|
 
 
-还有一个最关键是什么？ 兄弟姐妹们，这个申请完破产以后，我们到法庭上我们更有独立的，让法官知道我们为什么申请个人破产，过去的几年七哥被陷害。这对于破产法官来讲，你去想想看看。这个事实在这全摆着呢。其实几个案子，多少被陷害？ 刘延平来美国，就是咱把案子从那个法庭移到这个法庭，完全是个心情，所以战友们一定要学到，这个不是开玩笑的，你一定要了解美国的法律，了解你所在国的法律，这是特别特别重要的。 你说七哥每天吃什么喝什么都是全世界公开的，我拥有的什么都是全世界公开。任何一个战友都比你七哥有钱。所以说，兄弟姐妹们这次的破产案，我很多话还不能说。 因为这个刚才已经来告诉我了，不要在直播中谈那么多破产，我不能喊你们可以谈啊！这个让大家要学到法律是多重要。法律是太重要了。这就是西方和中国的不同。 你们想,我在中国那不知道多少罪弄到我头上去了是吧？ 秒间让你消失在人间，是吧？ 这就是真正的西方的伟大。 你可以有这些法律程序，你可以用法律正义来保护你自己的安全，你自己的利益。 这是我们在西方永远要学到的。 你看看那帮孙子路大脑袋郭宝胜还得意呢，他都不知道他噩梦已经到来，他还不知道。还有一个就是老说我们没钱没人，就像共产党老说美国没钱，美国帝国主义，你不要去美国不就完了吗？特别说共产党，美国那么坏，你要把你们儿女私生子女送到美国干什么？ 就像新中国联邦是骗子，是一帮疯子邪教。你别来不就完了吗？ 别参加不就完了吗？是不是，你说哪有一个不要脸 的人个天天去骂一个比自己过得好的人。碍你什么事儿呢？ 你不去不就完了嘛？碍你个蛋的事儿，你不要来不就好，你不看不就完了，你干嘛看呢？谢谢。
+据中共官媒新华社[报道](http://www.xinhuanet.com/english/20220215/2971ca648ff04357a15d0ddf83707464/c.html)，在总理李克强主持的中国国务院会议上，中国重申了其增加使用煤炭能源的立场，以“保护生产和日常生活中的用电量”。
+
+中国是世界上最大的污染国[，](https://www.bbc.co.uk/news/world-asia-57018837)2019年[排放](https://www.bbc.co.uk/news/world-asia-57018837)了约27%的世界温室气体，第二大排放国美国仅排放了世界11%的污染——不到中国总排放量的50%。
+
+尽管中国最初于2016年签署了联合国《[巴黎气候协定](https://www.breitbart.com/politics/2017/06/02/liberal-states-cities-ask-u-n-to-let-them-join-paris-agreement-raising-legal-questions/)》，该协议旨在将全球气温上升控制在2°C以下，并在2021年与美国的联合声明中重申了减少排放的承诺，**但在疫情期间，中国增加了煤炭产量****，在2021****年达到使用**[**40多亿**](https://www.theguardian.com/environment/2022/jan/17/chinas-coal-production-hit-record-levels-in-2021)**吨煤炭的十年新高**。
+
+煤炭使用的增加表明，中国已不可能履行其到2030年达到排放峰值并在2060年实现碳中和的国际承诺。
+
+这个共产主义国家的能源掉头是在中国经济因国际燃料短缺而受抑制后出现的（例如，抵制澳洲煤炭），冠状病毒大流行导致这个国家14亿人多次停电。
+
+此后，中共独裁政权[下令](https://www.france24.com/en/live-news/20220216-china-govt-to-help-run-coal-power-plants-at-full-capacity)重新开放国内煤矿，并取消减排生产配额，这意味着中国的煤电厂将满负荷运营。
+
+**当西方人口被迫**[**勒紧裤腰带**](https://www.breitbart.com/national-security/2010/12/05/obama-ban-of-offshore-oil-drilling-undermining-our-country/)**并应对绿色能源政策的昂贵**[**影响时**](https://www.dailymail.co.uk/debate/article-10366275/ROSS-CLARK-DOES-green-tax-energy-bill-actually-pay-for.html)**，中共国主席习近平告诉他的政府，任何减少中国排放的努力都不应干涉中国的经济增长**——这表明中国在不久的将来不会做出任何有意义的改变来遏制其排放。
+
+新闻链接：[China Goes All in on Coal: Ramps Power Output to Full Capacity (breitbart.com)](https://www.breitbart.com/asia/2022/02/16/china-goes-all-in-on-coal-ramps-power-output-to-full-capacity/)
 
 *发布：tianzhihuan*
 
