--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,19 +1,34 @@
 ---
-title: 大直播后记：七哥谈乌克兰与俄罗斯
+title: 一起中共间谍涉嫌走私军事装备背后的阴谋
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2030756/)
+`走进澳洲` [轉載自GNews](https://gnews.org/zh-hans/2030852/)
 
-整理：Miles Sun、Ghope
-编辑：Sadhu
+#### **【雅典娜观察】和您一起洞察世界**
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/JV4_5ME01ZG_5LC@60.png)图片来源：墨尔本雅典娜农场设计组
+翻译/编辑：文泓
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/3-53.png)
 
 
-七哥：我大概是在11、12岁之后，破处之前，我都有虱子， 破处的那一年后就没虱子了，以后走上江湖，就到处洗澡了。现在的中国人到处都是虱子，好不好？ 现在的中国人到处都是虱子，好不好？ 人家怎么不说你是脏臭呢？ 我跟你讲，俄罗斯人在乌克兰身上，你看到乌克兰的美女，你看看中国人到乌克兰嫖美女去，是个人都去嫖美女去，乌克兰跟日本一样，就是最希望不要被中国男人给嫖。后来整个明斯克协议就是所谓的，就是你要属于欧洲是吗？ 它本来属于苏联的，你不要把接受加入欧洲，让欧洲把武器布在你的领土上，我就不打你。就像微蓝和小seven离婚了，是吧？ 微蓝说，你只要别再娶新媳妇，咱俩就不打。 然后小seven说，小福利，你只要别有男朋友咱俩就不掐是吧？ 现在是乌克兰明斯克协议，现在乌克兰说我要有女朋友了，我要结婚啊， 跟欧洲结婚。 普京说那我就揍你了。 普京揍他是对的，在法理上，因为明斯克协议说好的你不能嫁人，我也不收拾你。你嫁人了，我就可以揍你，这里边有2个问题文化和利益的问题。 乌克兰当年是所有的前苏联导弹，大飞机，大运输机，大型坦克重点的将近是核心的军事技术，全在乌克兰。你没去过基辅，没有去乌克兰，你谈乌克兰，说你们真的觉得你就是个傻 子一样，你到了这个地方，你会发现这个地方，人是太漂亮了。他们太会生活了，他为啥在 二战的时候造出这么多大飞机大炮出来？这苏联这老 毛 子跟中国中国人不是一个级别的就。但是就是生活上意志上身体上技能上精神上文化上，就人那乌克兰吃完饭人家穿得咔咔咔，那跳舞啪啪那跳，这晃的就是让你觉得浑身就根本就不行了。这是吃牛油的问题吗？ 就是人家那咔咔咔咔就那跳一直跳两三个小时，小孩给你跳，她就这么跳，弄得你就热血膨胀，啥事抓耳挠腮就是，真的是那会儿就想双修。你知道吗？  然后精神错乱，只看裤腰带以下，你就没啥看的了，眼睛都慌了，这还了得了是吧？ 就你冷静不了。就是你每天晚上都能兴奋这个两三个小时。 哇塞，人家这人长得好，你穿那个衣裳，人家那女孩拖着人家的内裤，人家都是那自己拿针缝的，那棉的带边儿的，对不起啊，这暴露了我这没少看了，就是发现人家那儿像咱们中国人，内裤都是那个什么肉皮色的，化纤的，就是人家那女孩的内裤都是那带边边的啊，都好看的不得了，人家很在乎穿，人家指甲修的，脚指甲修的。
+本周，澳大利亚议会被中共国有影响力指控案件所困扰。周五，昆士兰地方法院审理了64岁的华裔黄金海岸会计师Kim李博伟和63岁的俄罗斯裔布里斯班企业家亚历山大·谢尔被指控违反了澳大利亚《国防贸易管制法》。
 
-咱们中国人恨不得一年都不剪一次，脚指甲都带钩了，是吧？ 都是泥里边那脚指甲呢，都可以种花了啊，你就跟人家不是一个段落。
+多方消息来源称，指控源于澳大利亚安全情报组织（ASIO）对一个在澳运作的中共间谍网络的更广泛调查。**早在****2016****年****8****月，澳大利亚官员拦截了一架由澳洲赌场组织的、从黄金海岸飞往新西兰的不寻常的私人飞机航班，就发现了这个网络的成员。**
 
-资料来源：[2022年2月16日 文贵大直播](https://gettr.com/streaming/ptgw8b5f32)
+李先生是该航班上的六名乘客之一。其他乘客包括习近平主席的表弟齐明、墨尔本有组织犯罪头目和赌场旅行团经营者号称唐人街先生周九明，以及另一个被怀疑与中国情报部门有关的人物。
+
+由于齐明与习家的关系，以及他与墨尔本的中国犯罪人物和中共特工的关系，而且齐明曾为中兴通讯工作，该公司与中国军工综合体的关系有案可查，ASIO对齐特别关注。
+
+布里斯班地方法院周五听取了李博伟和谢尔被指控与另一名中国公民和前墨尔本商人布莱恩·陈合作，**陈现在躲在海外，是国际刑警组织红色通报的对象。**
+
+ASIO消息人士称，**布莱恩·陈是第一个在澳大利亚被揭发的中共情报嫌疑人员，在****2019****年底也被多家澳洲媒体列入调查的一部分，并公布了陈先生曾试图渗透到澳大利亚议会的指控。**这些报道详细介绍了ASIO的一名线人声称，陈先生曾试图通过扶植维多利亚州自由党成员赵波成为议员，从而在联邦议会安插一名间谍。
+
+2019年，陈成为ASIO强烈关注的对象。在此之前，他住在墨尔本，经营着几家企业。他还被列为几家香港和中国大陆公司的董事和股东，与中国军事采购业有很深的关系。
+
+然而，赵波于2019年3月意外死亡，此前他告诉ASIO官员，陈先生曾向他提供100万澳元，供他竞选联邦议会席位。ASIO官员于2019年3月在墨尔本机场询问了陈先生，但他随后被允许离开澳大利亚。
+
+作为对这些披露的回应，ASIO局长迈克·伯吉斯发表了一份公开声明，称其目前正在“认真对待”有关涉嫌干预阴谋的指控。
+
+新闻链接：[Alexander Cher, Brian Chen accused of smuggling military equipment by AFP (smh.com.au)](https://www.smh.com.au/national/afp-uncovers-suspected-chinese-spy-s-alleged-plot-to-smuggle-military-equipment-20220218-p59xld.html)
 
 *发布：tianzhihuan*
 
