--- a/gnews/28.md
+++ b/gnews/28.md
@@ -1,48 +1,22 @@
 ---
-title: 《中共的女人》
+title: 德国数以万计的反疫苗抗议变得更加激進
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2030590/)
+`Tokyo Sakura Video Group` [轉載自GNews](https://gnews.org/zh-hans/2030780/)
 
-作者—爱战神
-校对/上传—无明逆流
+作者：东京樱花团视频小组
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/W2-edited.jpeg)图片来源：网络
 
-甲：中共匪魔毛贼东，玩完女性一边丢
-乙：日日夜夜新郎做，染上性病不肯治
-丙：有病依旧搞双修，吓得女人如避鬼
-丁：淫魔
-甲：假仁假义发召令，妇女能顶半边天
-乙：解放妇女去工作，家里家外忙不停
-丙：上班辛苦持家累，蓬头垢面是头驴
-丁：女韭菜
 
-甲：计划生育政策好，党和政府来养老
-乙：重男轻女陋传统，阴阳比例大失调
-丙：贫穷落后十亿人，光棍娶妻靠捆绑
-丁：老无以
-甲：贩卖女性三千元，年龄大的不值钱
-乙：逃跑砍断手和脚，手铐脚镣铁链子
-丙：赤身裸体鞭抽打，全村男人来轮奸
-丁：悲惨
-甲：致残逼疯生小孩，八九十个小韭菜
-乙：阴曹地府在人间，呼天抢地都不灵
-丙：中共作聋又装哑，动用权力媒体压
-丁：恶之源
 
-甲：平常女子守清贫，日子难熬倍焦急
-乙：风光女人卖肉体，依附权贵当作天
-丙：除非自身命来好，含着金钥匙出生
-丁：没几个
-甲：中共生育计划变，管你管她生殖器
-乙：一胎二胎变三胎，四胎五胎都可能
-丙：中共女人不是人，就是苦逼猪和牛
-丁：机器
-甲：中共不灭妇女灾，中共不灭灭世界
-乙：新中国联邦崛起，推翻中共有猛劲
-丙：尊重女性是七哥，消灭中共女人喜
-丁：人人喜
 
+
+
+校对：东京樱花团视频小组
+
+编辑发布：东京樱花团视频小组
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/yht-1.jpg)喜马拉雅东京樱花团
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
