--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,23 +1,24 @@
 ---
-title: 美通过《2022年美国竞争法》，防止中共企业垄断
+title: 樱花FM&#124;中日财经爆:美国电费翻三倍 物价创纪录 入店行窃增加
 ---
-`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/2031169/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2031465/)
 
-[撰稿日期]：2022.02.16
+音频：东京樱花团/战友520
+![](https://assets.gnews.org/wp-content/uploads/2022/02/unnamed-1-3.jpg)
+在创纪录的价格继续上涨的美国，一些地区的电费几乎翻了三倍。纽约市的家庭电费，单位电价增加了大约是上个月的三倍。电力公司将其归因于天然气价格上涨。
 
-[署名]：台湾宝岛农场\_阿尔道夫
+此外，纽约警察局发现，由于物价上涨，入店行窃比两年前增加了 15%。某连锁超市中，肉类、冰淇淋、洗洁精等物价上涨幅度较大的物品盗窃事件屡见不鲜。
 
-[新闻连接]：《https://www.epochtimes.com/b5/22/2/15/n13577942.htm》
+美国 1 月份消费者价格指数增加了7.5%，为 40 年来的最高涨幅。
 
-[正文]
+文字版原文：
 
-年来，因中共积极游说国际电信联盟（ITU）、国际电工委员会（IEC）等机构，让中共的企业获得竞争优势。面对此冲击，美在北京冬奥开幕当天通过《2022年美国竞争法》，旨在促进美半导体制造业，抵消中共扭曲市场的贸易行为，包括加强反倾销规则等。
+[中日财经爆┃美国电费翻三倍 物价创纪录 入店行窃增加](https://gnews.org/zh-hans/1994288/)
 
-美国也和日本连手建立6G无人化技术的国际标准，防止中共企业垄断；并强化尖端技术保护，防范中俄经济间谍战。
+编辑：东京樱花团/asket
+发布：东京樱花团/yuxingcao01
+![](https://assets.gnews.org/wp-content/uploads/2021/12/樱花-3.jpg)
 
-欧盟主管竞争事务的执委维斯塔哲（Margrethe Vestager）表示，中共近期也重新定义网络的基本标准，也因而让中共对使用国有网络的使用者有更大的控制权，因此，欧盟委员会也提出对行业标准系统实施改革，藉以避免欧洲的数码产业等沦为被中共主导、垄断的惨境。
-
-然而，北京大学在其报告中却罕见承认，美中科技脱钩后，中共无论在技术面或产业面等明显落后，尤其是芯片制造、人工智能及信息科技产业等，更会面临发展瓶颈，可说中共的损失比美国更大，然而却因滥中共立场反调而被火速删除，足见中共对言论思想的极端宰制，同时某种程度也印证了中共的野心。
 
  
 
