--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,37 +1,21 @@
 ---
-title: 马里兰州夫妇承认向外国政府出售核潜艇机密
+title: 澳大利亚警方承认对堪培拉抗议民众使用了LRAD装置
 ---
-`波士顿五月花农场金融部` [轉載自GNews](https://gnews.org/zh-hans/2030895/)
+`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/2031254/)
 
-素材整理：波士顿五月花 Vicky
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Screen-Shot-2022-02-19-at-7.57.58-PM.png)图片来源：互联网
-**一名美国海军工程师的妻子被指控协助其丈夫将核动力潜艇机密向国外出售。**
+作者：台湾宝岛农场 寻文客
 
-**46岁的戴安娜-托比（Diana Toebbe），曾是一名教师，根据她与联邦检察官达成的认罪协议，她将在监狱中度过不超过三年。**
 
-**她的丈夫乔纳森-托比（Jonathan Toebbe），42岁，本周早些时候认罪。**
 
-**根据他的认罪协议，他将被判处约12-17年的刑期。**
+**【新闻链接】**[https://www.rebelnews.com/police\_confirm\_use\_of\_controversial\_lrad\_device\_at\_canberra\_protest](https://www.rebelnews.com/police_confirm_use_of_controversial_lrad_device_at_canberra_protest)
 
-**托比夫妇都在西弗吉尼亚州马丁斯堡的联邦法院承认了密谋传播限制性数据的罪名。**
+**据外媒****2****月****18****日报导，澳大利亚首都地区警方承认，在堪培拉议会大厦外的自由车队集会期间，他们使用了长距离声学装置（****LRAD****）。**
 
-**乔纳森-托比是潜艇核动力系统方面的专家，这是国家最严密的机密之一。**
+**LRAD****装置有两种模式。一种为传递信息的扩音装置，另一种则是控制人群的****“****声波武器****”****。****LRAD****装置在人群中的使用存在极大争议性，如纽约市警察局曾向联邦法庭建议停止对处于警戒状态的抗议者使用****LRAD****装置。**
 
-**据司法部称，他试图将这些信息卖给外国政府，向他认为是外国官员的人发送信息。事实上，这名外国官员是一名卧底的联邦调查局特工。**
+**LRAD****装置在堪培拉的使用让很多公众观察家感到震惊，因为****LRAD****装置本质是一种人群控制声波武器。在非扩音设置下使用****LRAD****装置及其危险，已知会造成永久性听力损伤、脑损伤等结果。**
 
-**这类案件的认罪求情协议虽然属于不同寻常，但它们有可能达成。法律专家说，联邦调查员对这类案件非常重视，他们可能愿意支持对被告人的较轻判决，以换取他们的信息。**
-
-**纽约哥伦比亚大学法律教授丹尼尔-里奇曼（Daniel Richman）说，有时，”检察官会放弃对被告的最高刑罚，以便让他们说出可能有助于他们反间谍行动的事情”。**
-
-**在这个案件中，调查人员希望从被告那里找到一些东西。根据联邦调查员起草的宣誓书，乔纳森-托比曾要求以加密货币支付10万美元，以换取核机密。**
-
-**作为认罪协议的一部分，托比夫妇表示，他们将帮助联邦调查局收回在导致他们被捕的联邦调查期间寄给他们的加密货币。**
-
-参考链接：[Maryland couple plead guilty in nuclear secrets plot](https://www.bbc.com/news/world-us-canada-60442225)
-
-* * *
-
-*编辑&发布：Vicky*
+**据悉，澳大利亚联邦警察、昆士兰州警察、南澳大利亚州警察、西澳大利亚州警察和澳大利亚维多利亚州警察都证实他们已经购买了****LRAD****装置。**
 
  
 
