--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,33 +1,23 @@
 ---
-title: 大直播后记——韩正状态很不好
+title: 中日财经爆┃乌克兰危机和全球通货膨胀联手推高黄金价格
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/2030796/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2031075/)
 
-整理：Miles Sun、奋斗
-编辑：Kelly
+撰稿：东京樱花团/山顶闲人
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1792.png)[图片来源](https://news.fx678.com/202108101405282534.shtml)
+据法广法文网2022年02月18日星期五在«原材料»专栏报道，分析报道指，国际黄金价格当前持续上扬。本周一度逼近每盎司（31.1035克）1900美元，达2021年7月底以来的一个新高。推高黄金期货价格两大主要原因分别是乌克兰危机和通货膨胀。
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/JV4_5ME01ZG_5LC@60.png)图片来源：雅典娜设计组（614）
+这篇专栏报导指出乌克兰与俄罗斯之间的危机在近期恶化让投资者担心。美国总统拜登在02月17日星期四判断，俄罗斯入侵乌克兰的威胁依然非常的高。法国业界人士认为，如果出现这种场面，不排除世界发生股市崩溃的可能。贵重金属交易平台aucoffre.com网站负责人富尔（M.FAURE）指出，面对如此不确定性，投资者不愿冒风险。他们购买黄金被认为如同保值（Valeur refuge）。黄金在动荡时期确有保值趋势。这在2019年也如此，当时中美关系紧张，导致黄金价格急涨。
 
+除乌克兰危机之外，通货膨胀似乎并非只是如同预期那样的短暂过渡，形成了在过去几周推动黄金价格上涨的另一因素。在美国，通货膨胀同比在一月份达到7.5%。这是40年来前所未见。通胀高企，储蓄贬值。结果是，投资者甚至家庭购买黄金。这自动抬高黄金价格。
 
-头两天，有人见了韩正说，都傻了。他说，韩正这个人锻炼、生活方式，是中央里最好的人，（这次见了）韩正是言不由衷、神不守舍，而且状态特别不好。他老婆老说他口臭，说他最近口臭，这个医生正在调（理），口臭，她说你别挨他那么近，口臭啊。
+郭先生在最近大直播指出，世界大多数国家的法定货币是依靠政府通过法令和行政手段，来让民众强制使用的货币，而其本身根本毫无价值。疫情期间，世界各国政府大量印发钞票加剧通货膨胀，加之，乌克兰危机与台海危机会加剧全球供应链“断裂”，全球大宗商品狂涨，会使法币购买力下降。这样会进一步推高黄金价格的飙升。值得一提的是HCN（喜币）作为世界上唯一一款与黄金价格锚定的数字货币，HCN（喜币）在未来一定能有着巨大的上扬空间和光明的前景。
 
-这是上海的老同志回来后跟我说的，他说韩正状态不好，一提习，（就说）不要谈政治啊，咱们就谈谈上海的这些生活的事。就把韩正吓成这个样子。可见整个中共到了什么地步。
+信息来源：[乌克兰危机致黄金价格上扬？](https://www.rfi.fr/cn/%E6%AC%A7%E6%B4%B2/20220218-rfi-%E6%B3%95%E5%B9%BF-%E5%B0%BC%E5%8F%A4%E6%8B%89-%E5%8E%9F%E6%9D%90%E6%96%99-%E4%B9%8C%E5%85%8B%E5%85%B0%E5%8D%B1%E6%9C%BA%E8%87%B4%E9%BB%84%E9%87%91%E4%BB%B7%E6%A0%BC%E4%B8%8A%E6%89%AC)
 
-说实话，这是我们新中国联邦最希望有的感觉。今年（共产党）千万别倒啊，再给我们点时间，让世界把所有的事儿都整明白，新中国联邦有能力影响下一届，咱们真正的民选总统，现在这个时候还真没准备好，他死太早真不行。就像路大脑袋、蛇妖闫、九指妖，这帮孙子今天进监狱，绝对不好玩。
-
-昨天木兰发信息给我说，郭宝胜那个高兴，说：“我在郭文贵破产名单上有1000万。”战友们，我现在想毁谁，我一定把谁加名单上，很简单，我把谁加名单上，你都得面对官司，你都得拿律师费，你必须得到法庭来，郭宝胜不准备50万美元想逃过这个劫是不可能的。1000万你想拿到，肯定绝对千分之一机会都没有，千亿分之一的机会都没有。但是你准备好几十万美金的律师费上法庭是必须的，而且你必须上庭，（郭保胜）就是这种愚蠢的猪。
-
-资料来源：郭先生GTV和盖特直播视频
-
-*发布：tianzhihuan*
-
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
-
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
