--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,24 +1,23 @@
 ---
-title: 《历史的今天》2022.02.19
+title: 中共再次香港放毒，感染创两年新高
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2030795/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2031073/)
 
-作者：JAY (杰伊)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/0219.jpeg)
-一，1942年2月19日，日本海军航空兵对澳大利亚达尔文港发动空袭。
-二，1942年2月19日，美国将112,000多名居住在美国的日裔美国人和日本人强制遣送拘留营。
-三，1938年2月19日，希特勒演讲，这是德国纳粹政权扩张的开始。
-四，1945年2月19日，美国海军在硫磺岛登陆，向日本军发动进攻，硫磺岛战役爆发。
-五，1980年2月19日，美国再次表示坚决抵制莫斯科奥运会。
-六，2008年2月19日，卡斯特罗卸任其在位49年的古巴总统职位。
-七，2020年2月19日，班农先生与郭文贵先生在喜马拉雅大使馆直播谈论中共国武汉疫情及影响。
-八，2021年2月19日，郭文贵先生直播表示，以毒灭共是我们新中国联邦、爆料革命真正的、大的、巨大的，可以说是第一的利器！第二个过去是我们的香港运动，现在这香港运动还排第二。
-九，2021年2月19日，美国总统拜登与七国集团(G7)领导人线上峰会，讨论新冠疫情、全球经济、以及对抗中共国的“非市场导向”政策。
+撰稿：东京樱花团/盐和光
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1787.png)[图片来源](https://www.scmp.com/news/china/article/3167674/chinese-medical-staff-rally-hong-kong-covid-19-campaign)
+网易新闻2月19日报道，据香港卫生防护中心公布，香港新增6063例新冠肺炎确诊病例，累计确诊46763例。香港卫生防护中心数据，并且另有约6300例初步阳性病例，合计突破1.2万例，是疫情爆发两年来的新高。
 
-* * *
+根据香港医院管理局公布的数据，从1月24日起，住院人数不断攀升，1月22日，住院人数为330人，而到了2月9日，住院人数已达到1990人，是1月22日住院人数的6倍之多。
 
-*发布：Theodosia*
+香港此前四轮疫情中，单日新增病例数的最高值（7天平均值）也仅为132例（2020年7月28），而目前7天平均值已接近600例，约为此前最高值的6倍。相较之下，香港的毒疫苗接种率较低，为74%，而接种两剂毒疫苗的占比仅为66%。
 
+中共一边放毒致使香港感染人数创两年新高，一边大规模在国内和香港接种毒疫苗，将导致国人无法繁衍正常的下一代，种族劣化，甚至种族灭绝。新冠毒疫苗是披着“疫苗”的外衣的主攻微血管的病毒。新冠毒疫苗和CCP病毒的刺突蛋白对血管和器官的毒性，基因剪辑技术精心制造的新型生化病毒。
+
+信息来源：[香港今日新增确诊约7000例！各地疫情最新研判→|接种|免疫\_手机网易网](https://3g.163.com/dy/article/H0J991NI0552R7ZF.html)
+
+*编辑：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
