--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,17 +1,23 @@
 ---
-title: 美欧政府已经放任集体感染 预计十几亿人将因疫苗死亡
+title: 《历史的今天》2022.02.19
 ---
-`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/2030695/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/2030795/)
 
-疫苗灾难下，有科学家已经透露，预计将有十几亿人会因为疫苗而死亡。
+作者：JAY (杰伊)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/0219.jpeg)
+一，1942年2月19日，日本海军航空兵对澳大利亚达尔文港发动空袭。
+二，1942年2月19日，美国将112,000多名居住在美国的日裔美国人和日本人强制遣送拘留营。
+三，1938年2月19日，希特勒演讲，这是德国纳粹政权扩张的开始。
+四，1945年2月19日，美国海军在硫磺岛登陆，向日本军发动进攻，硫磺岛战役爆发。
+五，1980年2月19日，美国再次表示坚决抵制莫斯科奥运会。
+六，2008年2月19日，卡斯特罗卸任其在位49年的古巴总统职位。
+七，2020年2月19日，班农先生与郭文贵先生在喜马拉雅大使馆直播谈论中共国武汉疫情及影响。
+八，2021年2月19日，郭文贵先生直播表示，以毒灭共是我们新中国联邦、爆料革命真正的、大的、巨大的，可以说是第一的利器！第二个过去是我们的香港运动，现在这香港运动还排第二。
+九，2021年2月19日，美国总统拜登与七国集团(G7)领导人线上峰会，讨论新冠疫情、全球经济、以及对抗中共国的“非市场导向”政策。
 
-美欧政府已经放任集体感染，政府解除疫苗护照的原因：1.经济撑不住了，2.政治撑不住了，3. 病毒有减缓迹象。
+* * *
 
-冠状病毒还没结束，郭文贵先生再发警告，22年5月前，战友们务必要小心。
-
-视频来源: 20220218—郭先生大直播
-视频制作: 文星光，梦田
-文案:文星光
+*发布：Theodosia*
 
  
 
