--- a/gnews/27.md
+++ b/gnews/27.md
@@ -1,42 +1,42 @@
 ---
-title: 《冬眠会》
+title: 为什么我们不调查运动员猝死的激增？
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2030600/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2030793/)
 
-作者—爱战神
-校对/上传—无明逆流
+**编译： Jenny Ball**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/tempsnip为什么我们不调查运动员猝死的激增？.png)图片来源：childrenshealthdefense.org
+故事概览：
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/screenshoteasy-9.png)图片来源：网络
+- 英国足球传奇人物和体育评论员马特·勒蒂西尔（Matt Le Tissier）一直在谈论大量运动员在球场上倒下或死亡，并因此失去工作。
 
-甲：彭彭引颈高歌吟，我爱塞北人造雪
-乙：包子终圆纳粹梦，世界老大茫然懵
-丙：冬眠会上耷脑袋，臃肿两层衣防弹
-丁：丢丑
 
-甲：七哥大唱假雪歌，吓得彭彭不敢歌
-乙：夫唱夫随秀恩爱，权力双双登顶峰
-丙：跪天求地蓝金黄，讨债要饭才肯来
-丁：撒币
+勒蒂西尔表示，他踢足球的 17 年里，从未见过这样的事情——他呼吁对这些事件进行调查，并表示，无视这些是官员们的“严重失职”。
 
-甲：普京千亿九小时，中共毁约愤怒起
-乙：人造假雪祸千年，普帝不忍来呵斥
-丙：保镖染毒死三个，盘古阻击头头死
-丁：乱
+- 事实核查人员和政府官员，正试图否定或抹黑支持这种理论的信息，即 mRNA 注射是造成伤害和突然死亡的原因，他们故意无视对这些指控的调查。
+- 疫苗不良事件报告系统 (VAERS)，仅仅反映普通人群中运动员的受伤情况，但这些突然死亡的报告可能远未发布。
 
-甲：三十国家穷小弟，可怜兮兮把习舔
-乙：羊进狼窝关着宰，善待佳肴是面包
-丙：可怜楚楚运动员，痛哭控诉中共行
-丁：损
 
-甲：中共运动员猛秀，雌雄莫辨怎双修
-乙：中共皆是假恶丑，一切全是假大空
-丙：贻笑大方天下扬，不以为耻反为荣
-丁：没脸
+随着时间的推移，因 COVID mRNA 注射而遭受悲惨后果的人的名单越来越长。
 
-甲：爆料革命来揭露，习神里外不是人
-乙：中共冬眠巳冻死，永做恶梦遥无期
-丙：消灭中共恶魔鬼，唯有克星郭文贵
-丁：七哥
+其中许多人和他们的故事一直被掩盖在公众视野之外。YouTube、Instagram、Facebook 和其他社交媒体平台已经审查掉了记录他们受伤和永久性残疾的个人故事和视频，因此，那些只阅读主流媒体的人并没有意识到以科学的名义造成的巨大破坏。
+
+然而，有一部分人的伤亡情况已被公开。在过去的六个月里，一大批专业和业余运动员在赛场上倒下身亡。然而，主流媒体似乎从容应对，表现得好像正在发生的事情是完全正常的。
+
+但是，正如马特·勒蒂西尔在视频的前几秒中所描述的，这远非正常。马特·勒蒂西尔是一位足球传奇人物。在离开这项运动成为体育评论员之前，他在球场上的实力为他赢得了“乐神”的绰号，最近一次是在天空体育。
+
+正如他在采访中所描述的那样，他失去了这份工作，因为他大声疾呼，并引起人们对世界各地专业和业余运动员发生的大量无法解释的心源性猝死的关注。
+
+“我希望有人调查一下。我们可以回顾过去 15 年或 20 年……看看 10 年前发生了多少次猝死，再看看去年又发生了多少次。我一直在看很多体育赛事和很多关于足球的报道，我从来没有见过这样的事情，因为人群中的紧急情况，比赛而被打断的数量之高。”
+
+**新闻来源**：[childrenshealthdefense.org][Why Aren’t We Investigating Surge in Sudden Deaths of Athletes?](https://childrenshealthdefense.org/defender/surge-sudden-deaths-athletes/?utm_source=salsa&amp;eType=EmailBlastContent&amp;eId=f435bd0c-985a-4c45-a627-5d4df1da646b)
+
+* * *
+
+***审核：文乐
+校对：花羽
+发布：信心满满***
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/西喜-5.jpeg)
 
  
 
