--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,31 +1,45 @@
 ---
-title: 2022/02/17 墙内世界
+title: 郭先生发布“解救八孩女”悬赏次日,中共政府宣布重启该案调查
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2030580/)
+`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2030755/)
 
-1. 2月16日，江苏苏州。中共连续三天通报苏州新增新冠病毒确诊病例，引发苏州市民恐慌。进出苏州城市道路也在全面封锁中。
-2. 2月14日，江西抚州。孩子每次离家外出打工，都不敢回头。老母亲的送别让人泪目。
-3. 2月13日，福建莆田。中国的大部分年轻人们一年到头只有春节才有条件回家团聚短短几天，然后又在家中长辈泪目送别中离开故乡。
-4. 2月16日，河南。母亲准备在孩子熟睡时悄悄离开去外地打工。两个孩子得知泪流满面，不要买好吃的，退还妈妈零用钱。
-5. 2月16日，两位孩子的妈妈独自带两个小孩，因为各种压力，开车的时候忍不住哭了起来…
-6. 2月16日，广东广州。男子从诊室出来后伫立许久，手拿诊断书一动也不动。
-7. 2月15日，上海。子女为能顺利继承房产，将病重老人用担架推至房产过户大厅。
-8. 2月16日，安徽亳（bó）州。女子和丈夫结婚十多年年年还账，今年还完账后妻子边数钱边感叹：心里得劲的很。
-9. 勤劳的中国年青人在工厂工作往往承受着巨大的压力，每个人都是在极度被剥削人权的忍耐下过活，崩溃往往在一瞬间。
-10. 2月14日，被工人曝光的浙江东方基因生物制品股份有限公司在江西吉安的800人“豪华”员工宿舍。
-11. 2月16日，江苏淮安。中共政府的运动式捕狗。中共对公民任何的财产和人命都似乎拥有无限的最终解释权。
+作者：纽约香草山农场教育部-—Noemi
 
 
-* * *
-
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-40.png)
 
 
-编辑：【英国伦敦喜庄园编辑部】
+2022年2月17日中午，中共江苏省委省政府突发通告称：决定立即成立“丰县八孩女子”事件的行动调查组，并向公众承诺会彻底查明事实真相。而就在该公告发出的前一晚，郭文贵先生在大直播节目中发布了一则有关“解救八孩女的”悬赏。此次，中共政府紧急发布的这一通告也许就与郭先生的这则悬赏相关。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/131-1-1.jpg)
+据了解，目前已有很多墙内同胞都自发到达该事件的发生地——中共徐州市，并在当地冒着生命危险为“解救八孩女”一事勇敢发声。郭先生知悉此事后就面向公众再次发出了一则悬赏。郭先生称，在未来，这些敢于为“八孩女”事件发声、发推的正义人士，都将会获得一千乃至一万个不等的喜币奖励。而在该悬赏发出后的不到十二小时里，中共政府就突然成立了一个江苏省级的行动调查组，并声称会彻底查明事实真相，严惩该案件的违法犯罪行为，对有关责任人员进行严肃追责，还会将最终的调查结果及时公布于众。
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+有盖特网友对此评论称，中共政府此次对于“八孩女”事件的态度急转弯则再次体现出了我们新中国联邦、爆料革命的正义力量。
+
+参考来源：
+
+[https://gtv.org/video/id=620cf40c432ae869226d8db5](https://gtv.org/video/id=620cf40c432ae869226d8db5)
+
+[https://www.gettr.com/post/pv0tis1617](https://www.gettr.com/post/pv0tis1617)
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-42.jpg)
+
+编辑/校对/发稿：兰兰
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-41.png)
+
 
  
 
