--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,18 +1,23 @@
 ---
-title: 郭文贵先生发布海外排华警告
+title: 国际奥委会再遭诉讼 北京奥运如何闭幕
 ---
-`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/2031202/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2031479/)
 
-郭文贵先生发布海外排华警告！
+撰稿：东京樱花团/待命（文晓）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1793.png)（图片源自本文链接）
+2月19日的日本雅虎网站消息：美联社报道，代表美国参加北京冬奥会花样滑冰赛的运动员已向体育仲裁法庭（CAS）提起诉讼，要求在奥运会期间举行颁奖仪式。
 
-在以下地区的华人要多注意，包括但不限于：
+美联社的报道中写到，在北京奥运会花样滑冰赛中获得第二名的美国花样滑冰运动员就国际奥委会（IOC）推迟颁奖仪式的决定向体育仲裁法庭（CAS）提起诉讼。他们通过律师发给巴赫主席的封信中，要求在明天的闭幕式之前举行颁奖仪式。
 
-美国，特别是美国西部；非洲；日本；东欧，特别是俄罗斯。
+在俄罗斯奥运动员Walieva出现兴奋剂问题后，国际奥委会决定延期为花样滑冰队举行颁奖仪式。
 
-视频来源: 20220218—郭先生大直播
-视频制作: 文星光，梦田
-文案:文星光
+短短半个月的北京奥运, 仲裁法庭（CAS）不得不受理至少两件的起诉，这在奥运史上可能都没有过吧？北京奥运如何闭幕成疑！
 
+信息来源：[北京五輪フィギュア団体2位の米選手ら 大会中のメダル授与式の実施を求めて提訴（ABEMA TIMES） – Yahoo!ニュース](https://news.yahoo.co.jp/articles/954396764a628b59068ebd8dbf07950d18b540a5)
+
+*校对：东京樱花团/喜马拉雅的微尘
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
