--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,40 +1,43 @@
 ---
-title: 背弃《巴黎气候协定》，中共国增加使用煤炭能源
+title: 大直播—反抗疫苗暴政的利器：大卡车运动！
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2031035/)
+`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2031433/)
 
-#### 【雅典娜快讯】，紧贴时代脉搏
-
-翻译：攀登者
-编辑：文泓
-
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/3-54.png)图片来源：HubPages|
+作者：纽约香草山信息部—6zero4
 
 
-据中共官媒新华社[报道](http://www.xinhuanet.com/english/20220215/2971ca648ff04357a15d0ddf83707464/c.html)，在总理李克强主持的中国国务院会议上，中国重申了其增加使用煤炭能源的立场，以“保护生产和日常生活中的用电量”。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-49.png)
+郭先生在2月13日的大直播中提及，当下在加拿大、澳大利亚、法国的大卡车运动，就是源于郭先生当年在香港“反送中”运动中策划的大卡车封路运动，其本质是将当下和未来的经济活动与政治运动完整而完美地结合在一起，从而有效地夺回话语权，是和平抗议应对暴政的秘密武器，意义非凡，价值很深！
+![](https://assets.gnews.org/wp-content/uploads/2022/02/mz26.2-1.jpg)
+大卡车运动的精髓在于把握了社会运作最基本也是最核心的常识：把握经济命脉！即以点击面，用大卡车堵路切断经济运行最基本的流通环节，让国民经济陷于瘫痪和停摆，让暴政当局切身感受到剧痛和无奈。只有这样当局才会反思自己的暴政，才有可能坐下来跟民众谈判。
 
-中国是世界上最大的污染国[，](https://www.bbc.co.uk/news/world-asia-57018837)2019年[排放](https://www.bbc.co.uk/news/world-asia-57018837)了约27%的世界温室气体，第二大排放国美国仅排放了世界11%的污染——不到中国总排放量的50%。
+大卡车运动千万注意不要有任何暴力举动，不让当局有任何抓住把柄暴力镇压的机会，更不要成为被中共利用的工具。面对全世界普遍的疫苗暴政，各国民众反抗的大卡车运动正此起彼伏，如星星之火呈燎原之势！
 
-尽管中国最初于2016年签署了联合国《[巴黎气候协定](https://www.breitbart.com/politics/2017/06/02/liberal-states-cities-ask-u-n-to-let-them-join-paris-agreement-raising-legal-questions/)》，该协议旨在将全球气温上升控制在2°C以下，并在2021年与美国的联合声明中重申了减少排放的承诺，**但在疫情期间，中国增加了煤炭产量****，在2021****年达到使用**[**40多亿**](https://www.theguardian.com/environment/2022/jan/17/chinas-coal-production-hit-record-levels-in-2021)**吨煤炭的十年新高**。
+参考来源：
 
-煤炭使用的增加表明，中国已不可能履行其到2030年达到排放峰值并在2060年实现碳中和的国际承诺。
+[https://gtv.org/video/id=62090115a456fe1dea300f5a&gt;](https://gtv.org/video/id=62090115a456fe1dea300f5a%3E)
 
-这个共产主义国家的能源掉头是在中国经济因国际燃料短缺而受抑制后出现的（例如，抵制澳洲煤炭），冠状病毒大流行导致这个国家14亿人多次停电。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-46.jpg)
 
-此后，中共独裁政权[下令](https://www.france24.com/en/live-news/20220216-china-govt-to-help-run-coal-power-plants-at-full-capacity)重新开放国内煤矿，并取消减排生产配额，这意味着中国的煤电厂将满负荷运营。
 
-**当西方人口被迫**[**勒紧裤腰带**](https://www.breitbart.com/national-security/2010/12/05/obama-ban-of-offshore-oil-drilling-undermining-our-country/)**并应对绿色能源政策的昂贵**[**影响时**](https://www.dailymail.co.uk/debate/article-10366275/ROSS-CLARK-DOES-green-tax-energy-bill-actually-pay-for.html)**，中共国主席习近平告诉他的政府，任何减少中国排放的努力都不应干涉中国的经济增长**——这表明中国在不久的将来不会做出任何有意义的改变来遏制其排放。
 
-新闻链接：[China Goes All in on Coal: Ramps Power Output to Full Capacity (breitbart.com)](https://www.breitbart.com/asia/2022/02/16/china-goes-all-in-on-coal-ramps-power-output-to-full-capacity/)
+编辑/校对/发稿：兰兰
 
-*发布：tianzhihuan*
+**更多资讯，更多关注**
 
-**更多资讯，请关注：**
-[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-50.png)
+
 
  
 
