--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,15 +1,21 @@
 ---
-title: 共产党已被世界看成了一个巨大的威胁
+title: 习近平面临的问题层出不穷 近期同时做了脾和肾的手术
 ---
-`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/2030993/)
+`焦點20分` [轉載自GNews](https://gnews.org/zh-hans/2031408/)
 
-普京政治手腕高超，让攻打乌克兰的意图看起来“合情合理”，同时利用中共叫嚣攻台，降低攻打乌克兰在国际上的关注度。相比之下，习近平无论打不打台湾，中国共产党已经被世界看成了一个巨大的威胁。
+锁链女事件发生地，30年来有近万名无名女尸被发现。该事件也引发了江、胡、习派的问责纠纷，对习家影响巨大，并且引起世界对中共国女性人权的批判。
 
-美国人明确警告俄罗斯，如开战，就会关闭他们的SWIFT，极有可能也包括中共国的。
+彭帅事件，引发了国内外体育界，明星界对共产党高层的极度不满。
 
-在世界地缘政治上，中共根本没有参与的资格，他们只是被利用的奴役14亿中国人民的工具。
+冬奥谷爱凌事件，香港疫情大爆发，普京乌克兰争端。习近平面临的问题层出不穷。
 
-习近平
+不但如此，统计局内部信息透露，冬奥会花了近600亿，涉及所谓的援助2000多亿，并且党内以冬奥、国际战略等名义往国外疯狂洗钱，各地方政府也极尽所能骗中央的钱。
+
+习近平四面楚歌，近期同时做了脾和肾的手术。
+
+视频来源: 20220218—郭先生大直播
+视频制作: 文星光，梦田
+文案:文星光
 
  
 
