--- a/gnews/42.md
+++ b/gnews/42.md
@@ -1,30 +1,41 @@
 ---
-title: 秘翻新闻｜中共规定中小学聘用公检法人员 强制进行政治洗脑
+title: 背弃《巴黎气候协定》，中共国增加使用煤炭能源
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2031021/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2031035/)
 
-**By:[秘翻新闻](https://gtv.org/broadcast/watch/62108890b706176dd78d3423)**
+#### 【雅典娜快讯】，紧贴时代脉搏
 
-**[2022-02-19](https://gtv.org/broadcast/watch/62108890b706176dd78d3423)**
+翻译：攀登者
+编辑：文泓
 
-**今日主题：**
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/3-54.png)图片来源：HubPages|
 
-**1.疑暗讽冬奥赛场肮脏 加拿大队集体“扫奖台”**
 
-**2.中共通过捐款影响美国高等教育**
+据中共官媒新华社[报道](http://www.xinhuanet.com/english/20220215/2971ca648ff04357a15d0ddf83707464/c.html)，在总理李克强主持的中国国务院会议上，中国重申了其增加使用煤炭能源的立场，以“保护生产和日常生活中的用电量”。
 
-**3.加拿大警方开始镇压渥太华的抗议者**
+中国是世界上最大的污染国[，](https://www.bbc.co.uk/news/world-asia-57018837)2019年[排放](https://www.bbc.co.uk/news/world-asia-57018837)了约27%的世界温室气体，第二大排放国美国仅排放了世界11%的污染——不到中国总排放量的50%。
 
-**4.美国波士顿取消了出示疫苗接种证明要求**
+尽管中国最初于2016年签署了联合国《[巴黎气候协定](https://www.breitbart.com/politics/2017/06/02/liberal-states-cities-ask-u-n-to-let-them-join-paris-agreement-raising-legal-questions/)》，该协议旨在将全球气温上升控制在2°C以下，并在2021年与美国的联合声明中重申了减少排放的承诺，**但在疫情期间，中国增加了煤炭产量****，在2021****年达到使用**[**40多亿**](https://www.theguardian.com/environment/2022/jan/17/chinas-coal-production-hit-record-levels-in-2021)**吨煤炭的十年新高**。
 
-**5.挪威报告中称 中共有干预西方政治的意愿和能力**
+煤炭使用的增加表明，中国已不可能履行其到2030年达到排放峰值并在2060年实现碳中和的国际承诺。
 
-**🔗GTV鏈接：**[https://gtv.org/broadcast/watch/62108890b706176dd78d3423](https://gtv.org/broadcast/watch/62108890b706176dd78d3423)
+这个共产主义国家的能源掉头是在中国经济因国际燃料短缺而受抑制后出现的（例如，抵制澳洲煤炭），冠状病毒大流行导致这个国家14亿人多次停电。
 
-发布:星星
+此后，中共独裁政权[下令](https://www.france24.com/en/live-news/20220216-china-govt-to-help-run-coal-power-plants-at-full-capacity)重新开放国内煤矿，并取消减排生产配额，这意味着中国的煤电厂将满负荷运营。
 
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2022-02-19-171240.jpg)
+**当西方人口被迫**[**勒紧裤腰带**](https://www.breitbart.com/national-security/2010/12/05/obama-ban-of-offshore-oil-drilling-undermining-our-country/)**并应对绿色能源政策的昂贵**[**影响时**](https://www.dailymail.co.uk/debate/article-10366275/ROSS-CLARK-DOES-green-tax-energy-bill-actually-pay-for.html)**，中共国主席习近平告诉他的政府，任何减少中国排放的努力都不应干涉中国的经济增长**——这表明中国在不久的将来不会做出任何有意义的改变来遏制其排放。
+
+新闻链接：[China Goes All in on Coal: Ramps Power Output to Full Capacity (breitbart.com)](https://www.breitbart.com/asia/2022/02/16/china-goes-all-in-on-coal-ramps-power-output-to-full-capacity/)
+
+*发布：tianzhihuan*
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/dKQ6vFY9Fu)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
