--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,7 +1,7 @@
 ---
-title: 辉瑞公司撤回了批准用于 5 岁以下儿童疫苗的申请
+title: 加拿大卡车司机抗议运动对全球疫苗政策的意义
 ---
-`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2035112/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/2035202/)
 
 台灣寶島農場
 
